--- a/ok/ek/ek0zl07-0.1.0.0.0.md
+++ b/ok/ek/ek0zl07-0.1.0.0.0.md
@@ -12,6 +12,6 @@
 | 肺   | 咳喘       | 喷嚏，流涕鼻塞，咳嗽喘息，哽气或长出气，闷乱   | 白   | 浮       | 寒：鼻流清涕，喷嚏，咳嗽，喘闷，渴不喜饮<br />热：喘咳，呼吸不利，鼻干或衄血，手掐眉目鼻面<br />实：喘急，气粗，面赤，目突，稠痰不出，便秘尿赤<br />虚：哽气或长出气，喘而气少，皮毛干燥，面色白 | 娇脏     |
 | 肾   | 虚寒或虚热 | 目无精光，畏亮足胫逆冷，或舌红，少精，烦躁不眠 | 黑   | 沉       | 虚：阳虚：面浮，灰暗或㿠白，形寒便溏，尿清长或不禁<br />阴虚：舌红少津，烦躁不眠、便干，尿短 | 常虚     |
 
-五脏证治：通过儿科不断临床实践，亦在不断向前发展。清代温热学说的创立，更加丰富了儿科学的治疗理论。清代温病学家叶天士、吴鞠通，他们从临床中观察到儿科热性病居多，传变迅速。因此，不能机械地照搬用世俗通套之方。叶氏在《幼科要略》中提出，必须根据小儿生理特点进行辨证论治，预防疾病传变恶化，不能以见证施治来代替。叶氏对小儿热病的治疗法则，在五脏证治的基础上，提出了四序学说，以四时新感六淫之邪立论。在《三时伏气外感篇》中，阐述了一种由外感而引起的昏迷、惊厥、四肢厥冷，身体壮热、为小儿暑厥。外感暑邪，为此病产生的主要病因。暑邪为阳，易伤心气入营而煎熬阴血，热伤津液，热极生风，燥伤肝，故易牵引肝风内动而出现痉厥。叶氏认为暑邪初在卫气，则为恶寒、头痛、气粗，热甚微渴，邪渐入营，则见谵语，烦躁，蒸热。舌绛，则为热陷心包。热伤肝，故见昏迷惊厥，角弓反张，四肢抽搐，唇焦舌燥等证。若病入血分，反渴不多饮，唇舌绛赤，出现斑疹昏狂。这是叶氏卫气营血理论，在几科临床工作中的具体运用。
+五脏证治：通过儿科不断临床实践，亦在不断向前发展。清代温热学说的创立，更加丰富了儿科学的治疗理论。清代温病学家叶天士、吴鞠通，他们从临床中观察到儿科热性病居多，传变迅速。因此，不能机械地照搬用世俗通套之方。叶氏在《幼科要略》中提出，必须根据小儿生理特点进行辨证论治，预防疾病传变恶化，不能以见证施治来代替。叶氏对小儿热病的治疗法则，在五脏证治的基础上，提出了四序学说，以四时新感六淫之邪立论。在《三时伏气外感篇》中，阐述了一种由外感而引起的昏迷、惊厥、四肢厥冷，身体壮热、为小儿暑厥。外感暑邪，为此病产生的主要病因。暑邪为阳，易伤心气入营而煎熬阴血，热伤津液，热极生风，燥伤肝，故易牵引肝风内动而出现痉厥。叶氏认为暑邪初在卫气，则为恶寒、头痛、气粗，热甚微渴，邪渐入营，则见谵语，烦躁，蒸热。舌绛，则为热陷心包。热伤肝，故见昏迷惊厥，角弓反张，四肢抽搐，唇焦舌燥等证。若病入血分，反渴不多饮，唇舌绛赤，出现斑疹昏狂。这是叶氏卫气营血理论，在儿科临床工作中的具体运用。
 
 总之，小儿病的辨证论治，首先应当掌握小儿机体的特点，发病原因和病理机制，运用五脏证治理论对小儿杂病进行治疗，运用六经、卫气营血，三焦和时序学说，对小儿热性病进行治疗。在实践中，对各种辨证方法应该恰当结合，灵活运用，才能做到确切无误。
