--- a/ok/bc/bc03-0.4.2.0.0.md
+++ b/ok/bc/bc03-0.4.2.0.0.md
@@ -1,7 +1,6 @@
 ### 连 翘
 
-**〔原文〕微寒升浮，形似心**，实似莲房有辩，**苦入心，故入手少阴厥阴心**、心包。**气分而泻火，兼除手足少阳**，三焦、胆。**手阳明经**大肠。**气分湿热**。**散诸经血凝气聚**。营气壅遏，卫气郁滞，，遂成疖肿。**利水通经**，**杀**
-**虫止痛，消肿排脓**。皆结者散之。凡肿而痛者为实邪，肿而不痛为虚邪，肿而赤者为结热，肿而不赤为留气停痰。 **为十二经疮家圣药**。经曰：诸疮痛痒，皆属心火。
+**〔原文〕微寒升浮，形似心**，实似莲房有瓣，**苦入心，故入手少阴厥阴**心、心包。**气分而泻火，兼除手足少阳**，三焦、胆。**手阳明经**大肠。**气分湿热**。**散诸经血凝气聚**。营气壅遏，卫气郁滞，遂成疖肿。**利水通经**，**杀虫止痛，消肿排脓**。皆结者散之。凡肿而痛者为实邪，肿而不痛为虚邪，肿而赤者为结热，肿而不赤为留气停痰。 **为十二经疮家圣药**。经曰：诸疮痛痒，皆属心火。
 
 【讲解】**连翘以清心泻火，解毒疗疮为特长**。为木樨科落叶灌木植物连翘的果实。白露前采初熟果实，色尚青绿，称青翘；寒露采熟透果实，则为黄翘。以青翘入药为佳。生用。
 
