--- a/ok/gk/gk03-0.3.6.0.0.md
+++ b/ok/gk/gk03-0.3.6.0.0.md
@@ -26,23 +26,23 @@
 
 （1）浅反射：腹壁反射：病人仰卧，腹壁放松，用火柴棒划腹壁皮肤，可分上、中、下三部分划。正常时可看到腹肌收缩。截瘫病人或锥体束有疾患的反射消失。反射中心上腹壁在胸髓<sub>7〜8</sub>，中腹壁在胸髓<sub>9〜10</sub>，下腹壁在胸髓<sub>11〜12</sub>。
 
-提睾反射：划大腿内侧皮肤，同侧睾丸上提。有锥体束疾患，截瘫病入此反射消失。反射中心在腰髓<sub>1〜2</sub>。
+提睾反射：划大腿内侧皮肤，同侧睾丸上提。有锥体束疾患，截瘫病人此反射消失。反射中心在腰髓<sub>1〜2</sub>。
 
 肛门反射：轻划肛周皮肤，引起肛门外括约肌收缩。反射中心在骶<sub>4〜5</sub>。
 
 （2）深反射：一般指腱反射。肱二头肌反射：将病人前臂屈曲成90°〜100°，医者左手托该臂肘部，左拇指置肱二头肌腱上，用右手持叩诊锤叩左拇指，病人前臂屈曲。反射中心在颈髓<sub>5〜6</sub>。
 
-肱三头肌反射：病入前臂屈曲成90°，医者以左手托该臂肘尖，用叩诊锤直接叩击尺骨鹰嘴上方的肱三头肌肌腱，前臂稍有伸展，反射中心在颈髓<sub>6〜7</sub>。
+肱三头肌反射：病人前臂屈曲成90°，医者以左手托该臂肘尖，用叩诊锤直接叩击尺骨鹰嘴上方的肱三头肌肌腱，前臂稍有伸展，反射中心在颈髓<sub>6〜7</sub>。
 
 桡反射：病人屈肘至90°，前臂略旋前，叩击桡骨茎突，即见前臂有屈曲和旋后的动作。反射中心在颈髓<sub>5〜8</sub>。
 
-膝反射，病入仰卧或坐位，将一腿置于另一腿上，叩击髌韧带，可见股四头肌收缩及伸膝动作。仰卧时医者左手略将膝关节托起，使股四头肌放松，用叩诊锤叩击髌韧带。反射中心在腰髓<sub>2〜4</sub>。
+膝反射：病人仰卧或坐位，将一腿置于另一腿上，叩击髌韧带，可见股四头肌收缩及伸膝动作。仰卧时医者左手略将膝关节托起，使股四头肌放松，用叩诊锤叩击髌韧带。反射中心在腰髓<sub>2〜4</sub>。
 
-胫后肌反射；病人仰卧，下肢髋、膝关节微屈呈外旋位，医者用叩诊锤叩击内踝上方的胫后肌腱，可见足内翻，此反射有时不易引出。反射中心在腰髓<sub>5</sub>骶〜髓<sub>2</sub>。
+胫后肌反射：病人仰卧，下肢髋、膝关节微屈呈外旋位，医者用叩诊锤叩击内踝上方的胫后肌腱，可见足内翻，此反射有时不易引出。反射中心在腰髓<sub>5</sub>骶〜髓<sub>2</sub>。
 
 踝反射（跟腱反射）：病人卧位，髋关节外旋，膝关节屈曲，医者一手推足底，使踝关节略背屈，另一手用叩诊锤叩打跟腱，可见足有蹠屈的运动。如不易引出，可让病人跪在床边，医者一手推足底使背屈，另一手用叩诊锤叩击跟腱。反射中心在骶髓<sub>1〜2</sub>。
 
-腱反射的强弱因人而异，但在同一人其两侧或上下肢腱反射不相同则提示可能有神经系统疾患。腱反射减弱或消失是反射弧遭破坏所致，常为下运动神经元瘫痪，亢进则为上运动神经元瘫痪。通常用下列方法表示反射的程度：（-）消失，（+）减退，（++）正常，（+++）增强，（++++）亢进并伴有阵挛。
+腱反射的强弱因人而异，但在同一人其两侧或上下肢腱反射不相同则提示可能有神经系统疾患。腱反射减弱或消失是反射弧遭破坏所致，常为下运动神经元瘫痪；亢进则为上运动神经元瘫痪。通常用下列方法表示反射的程度：（-）消失，（+）减退，（++）正常，（+++）增强，（++++）亢进并伴有阵挛。
 
 亢进的腱反射常伴有阵挛，常见的有两种：
 
@@ -74,4 +74,4 @@ Code氏肌力测定六级表示法：
 
 Ⅴ级：正常肌力。
 
-一般按健侧相同肌的肌力作为对照。但是两侧肌肉都有瘫痪时，应按被检査相同年龄，一般体质的该肌肉肌力概念进行衡量。因此，它的精确性受到限制，还可因检査者的经验、方法、顺序等因素而有差异。对于初次来诊的病人，由于对检査方法不得要领，会做出不合检查者要求的动作，亦可因反复连续检查引起肌疲劳，而降低了评定肌力级别。所以，第一次检查的结果，与连续第二、第三次检査结果略有差异，一般稍有下降。
+一般按健侧相同肌的肌力作为对照。但是两侧肌肉都有瘫痪时，应按被检查相同年龄，一般体质的该肌肉肌力概念进行衡量。因此，它的精确性受到限制，还可因检査者的经验、方法、顺序等因素而有差异。对于初次来诊的病人，由于对检査方法不得要领，会做出不合检查者要求的动作，亦可因反复连续检查引起肌疲劳，而降低了评定肌力级别。所以，第一次检查的结果，与连续第二、第三次检査结果略有差异，一般稍有下降。
