update ok/hk/hk1gl01-0.21.12.0.0.md. 紧张内收者多突。  联系上下文，明显为实之误，扫描版为突。

--- a/ok/hk/hk1gl01-0.21.12.0.0.md
+++ b/ok/hk/hk1gl01-0.21.12.0.0.md
@@ -8,10 +8,14 @@
 
 〔辨证〕
 
-首先区别其虚实，除借助于包括脉诊、舌诊在内的全身症状外，还要观察声带的紧张度。一般松弛外展者多虚，紧张内收者多突。
+首先区别其虚实，除借助于包括脉诊、舌诊在内的全身症状外，还要观察声带的紧张度。一般松弛外展者多虚，紧张内收者多实<sup>[1]</sup>。
 
 〔论治〕
 
 实证，宗痹症处理，取祛风散寒利湿法，常用代表方有防风汤之类。
 
 虚证，宗痿症处理，取补益肝肾法，常用代表方有虎潜丸之类。
+
+------
+
+[^1]: “电子版注”扫描版原文为突，联系上下文改。
