--- a/ok/bc/bc03-0.4.4.0.0.md
+++ b/ok/bc/bc03-0.4.4.0.0.md
@@ -2,7 +2,7 @@
 
 **〔原文〕辛苦而寒。治痈疽发背，疔肿瘰疬，无名肿毒。叶如柳而细，夏开紫花结角，生平地者起茎，生沟壑者起蔓。**
 
-【讲解】**紫花地丁为痈肿疔毒通用之药，治疔毒尤为特长**。为堇棄科多年生草本植物紫花地丁，或豆科植物米口袋的带根全草。鲜用，或生用，切段入药。书载植物形状似为后者：其叶丛生、卵形或长卵形，花紫色，花冠蝶形，荚果圆筒形。
+【讲解】**紫花地丁为痈肿疔毒通用之药，治疔毒尤为特长**。为堇菜科多年生草本植物紫花地丁，或豆科植物米口袋的带根全草。鲜用，或生用，切段入药。书载植物形状似为后者：其叶丛生、卵形或长卵形，花紫色，花冠蝶形，荚果圆筒形。
 
 本品苦辛寒，入心、肝经。苦泄辛散，寒能清热，故能清热解毒、消散痈肿，为治血热壅滞、红肿热痛的疔痈疮疖通用之药，而以治疗疔毒为其特长。
 
