--- a/ok/bc/bc03-0.4.6.0.0.md
+++ b/ok/bc/bc03-0.4.6.0.0.md
@@ -1,7 +1,6 @@
-### 青黛
+### 青   黛
 
-**〔原文〕咸寒，色青泻肝。散五脏郁火，解中下焦蓄蕴风热**，《衍义》曰：一妇患脐腹二明偏生湿疮，热痒
-而痛，出黄汁，二便涩。用鳗鲡、松脂、黄丹之类涂之，热痛愈甚，其妇嗜酒，喜食鱼虾发风之物。乃用马齿苋四两研烂，入青黛一两和涂，热痛皆去，仍服八正散而愈。此中下焦蓄蕴风热，毒气若不出，当作肠风内痔，妇不能禁酒物，果仍发痔。**治伤寒发斑，吐咯血痢**，阴虚火炎者忌用。合杏仁硏，置柿讲中煨食，名圣饼子，治咯血。**小儿惊痫，疳热丹热，敷痈疮蛇犬毒。即靛花，取娇碧者，水飞净用** 。内多石灰，故须淘净。
+**〔原文〕咸寒，色青泻肝。散五脏郁火，解中下焦蓄蕴风热**，《衍义》曰：一妇患脐腹二明偏生湿疮，热痒而痛，出黄汁，二便涩。用鳗鲡、松脂、黄丹之类涂之，热痛愈甚，其妇嗜酒，喜食鱼虾发风之物。乃用马齿苋四两研烂，入青黛一两和涂，热痛皆去，仍服八正散而愈。此中下焦蓄蕴风热，毒气若不出，当作肠风内痔，妇不能禁酒物，果仍发痔。**治伤寒发斑，吐咯血痢**，阴虚火炎者忌用。合杏仁硏，置柿讲中煨食，名圣饼子，治咯血。**小儿惊痫，疳热丹热，敷痈疮蛇犬毒。即靛花，取娇碧者，水飞净用** 。内多石灰，故须淘净。
 
 【讲解】**青黛有清热解毒，凉血散肿的功效**。为菘蓝、马蓝、蓼蓝、草大青等植物（详见大青叶）叶中的色素，经加工制取，干燥而成的粉末状物。又称靛花、靛花沫。
 
