--- a/ok/gk/gk03-0.4.1.0.0.md
+++ b/ok/gk/gk03-0.4.1.0.0.md
@@ -2,9 +2,9 @@
 
 （一）伤筋的寒热证 寒、热是辨别疾病性质的。寒与热是阴阳偏盛偏衰的具体表现，《素问•阴阳应象大论》说：“阳胜则热、阴胜则寒”。素体阴盛之人，跌扑闪挫，损伤筋脉后，多表现为筋寒证；阳盛之体，则多表现为筋热证，也有久伤不愈，由寒化热或由热转寒的。
 
-1.筋寒证：素体阴寒内盛，或伤后过服寒凉之剂，耗伤阳气，或损伤日久，失于治疗，阳气日损等，均可致筋寒证。表现为：筋伤之处疼痛，但按压局部不甚疼痛，活动或遇劳后则疼痛增强；或伤筋后局部疼痛缠绵，日久不愈，遇风雨时痛增强，症状夜重昼轻，局部不红不肿，喜温喜按，触之筋腱松弛，指压有滑移感；常伴有畏寒喜暖，口淡不渴，面色㿠白，肢冷踡卧；小便清长，大便稀溏，舌质淡，苔薄白而润滑，脉迟或紧。
+1.筋寒证：素体阴寒内盛，或伤后过服寒凉之剂，耗伤阳气，或损伤日久，失于治疗，阳气日损等，均可致筋寒证。表现为：筋伤之处疼痛，但按压局部不甚疼痛，活动或遇劳后则疼痛增强；或伤筋后局部疼痛缠绵，日久不愈，遇风雨时疼痛增强，症状夜重昼轻；局部不红不肿，喜温喜按，触之筋腱松弛，指压有滑移感；常伴有畏寒喜暖，口淡不渴，面色㿠白，肢冷踡卧，小便清长，大便稀溏，舌质淡，苔薄白而润滑，脉迟或紧。
 
-2.筋热证：本证多因七情过激，郁而化火，或饮食不节，积蓄生热；或房室劳倦，劫夺阴精，阴虚阳亢，损伤筋脉后所致。亦有直接感受火邪（烧伤，烫伤）而致者。多表现为：损伤之处疼痛，肿胀较明显，昼重夜轻，局部皮肤青紫或有瘀斑，关节活动受限较明显，局部按之痛甚，这些症状多在损伤早期出现。常伴有：发热喜凉，口渴饮冷，面红目赤，烦躁不宁，小便短赤，大便干结，舌质红，苔黄而少津，脉数等症。
+2.筋热证：本证多因七情过激，郁而化火；或饮食不节，积蓄生热；或房室劳倦，劫夺阴精，阴虚阳亢，损伤筋脉后所致。亦有直接感受火邪（烧伤，烫伤）而致者。多表现为：损伤之处疼痛，肿胀较明显，昼重夜轻，局部皮肤青紫或有瘀斑，关节活动受限较明显，局部按之痛甚，这些症状多在损伤早期出现。常伴有：发热喜凉，口渴饮冷，面红目赤，烦躁不宁，小便短赤，大便干结，舌质红，苔黄而少津，脉数等症。
 
 （二）伤筋的虚实证 虚实是辨别邪正盛衰的。虚指正气不足，虚证是由正气不足所表现的证候；实指邪气过盛，实证是邪气过盛所表现的证候。此即《素问•通评虚实论》所说的：“邪气盛则实，精气夺则虚”。
 
