--- a/ok/bc/bc03-0.4.8.0.0.md
+++ b/ok/bc/bc03-0.4.8.0.0.md
@@ -1,4 +1,4 @@
-### 土茯苓
+### 土 茯 苓
 
 **〔原文〕甘淡而平。阳明**胃、大肠。**主药，健脾胃，祛风湿，脾胃健则营卫从，风湿除则筋骨利，利小便，止泄泻。治筋骨拘挛，杨梅疮毒**，杨梅疮，古方不载。明正德间起于岭表，其证多属阳明、厥阴而兼及他经。盖相火寄于厥阴，肌肉属于阳明故也。医用轻粉劫剂，其性燥烈，入阳明劫去痰涎，从口齿出，疮即干愈。然毒气窜入经络筋骨，血液枯槁，筋失所养，变为拘挛痈漏，竟致废痼。土茯苓能制轻粉之毒，去阳明湿热，用一两为君，苡
 仁、金银花、防风、木通、木瓜、白鲜皮各五分，皂角子四分，气虚加人参七分，血虚加当归七分，名搜风解毒汤。**瘰疬疮肿**。湿郁而为热，营卫不和，则生疮肿。经曰：湿气害人，皮肉筋脉是也。土茯苓淡能渗，甘能补，患脓疥者，煎汤代茶，甚妙。**大如鸭子，连缀而生，可名冷饭团。有赤白两种，白者良，可煮食，亦呵生啖。	忌茶**。杨梅毒用为主药。
@@ -7,8 +7,8 @@
 
  另外，同属植物暗色菝葜的根茎，又名白土苓，在少数地区亦作土茯苓使用。
 
-本品味甘淡，性平。入肝、胃经。功能利湿导热，尤长于解毒，历来治梅毒要药。土茯苓尚能利关节，解轻粉、水银毒，故对梅毒或因梅毒服用轻粉等汞剂而致肢体拘挛者，功效尤佳。现常用于热毒疮痈，热淋尿赤涩痛，以及湿疹湿疮，瘰疬等证。惟系淡渗之品，易于伤阴，故肝肾阴虚者慎用。据文献记载，服药时不可饮茶，否则能引起脱发，宜引起注意。
+本品味甘淡，性平。入肝、胃经。功能利湿导热，尤长于解毒，历来为治梅毒要药。土茯苓尚能利关节，解轻粉、水银毒，故对梅毒或因梅毒服用轻粉等汞剂而致肢体拘挛者，功效尤佳。现常用于热毒疮痈，热淋尿赤涩痛，以及湿疹湿疮，瘰疬等证。惟系淡渗之品，易于伤阴，故肝肾阴虚者慎用。据文献记载，服药时不可饮茶，否则能引起脱发，宜引起注意。
 
 【临证应用】土茯苓用于杨梅疮毒或因服汞剂所致的肢体拘挛，可较大剂量单用煎服或与金银花、白鲜皮、威灵仙、甘草等同用，如复方土茯苓汤；用于痈肿疮疖，可与金银花、蒲公英、连翘等配用；用于湿疹湿疮等皮肤病，可配苦参、黄柏、白鲜皮、地肤子等清利湿热之品同用。治热淋，常与木通、萹蓄、瞿麦等利尿通琳药同用。
 
-【用量用法】15—60克，煎服。
+【用量用法】   15—60克，煎服。
