--- a/ok/bc/bc03-0.4.9.0.0.md
+++ b/ok/bc/bc03-0.4.9.0.0.md
@@ -1,4 +1,4 @@
-### 马 勃
+### 马  勃
 
 **〔原文〕辛平轻虚。清肺解热**，东垣普济消毒饮中用之。**散血止嗽。治喉痹咽痛**，吹喉中良，或加白矾或硝扫喉，取吐痰愈。**鼻衄失音。外用敷诸疮良。生湿地朽木上，状如肺肝，紫色虚软，弹之粉出，取粉用**。
 
@@ -6,7 +6,7 @@
 
 本品辛平质轻，入肺经。善能宣散肺经郁热，尤长于利咽消肿，为治肺经风热，咽喉肿痛的常用药，亦可用于肺热咳嗽，失音。单用敷压伤口即可止血，故又常用于外伤出血之证。张寿颐曰：寇宗奭治喉痹咽疼，盖既散郁热，亦清肺胃，确是喉证良药。东垣普济消毒饮用之，亦是此意。内服外敷，均有捷验，诚不可以微贱之品而忽之。
 
-《备要》云：外用敷诸疮良。＜ 本草从新》释曰：每见用寒凉药敷疮者，虽愈而热毒内攻，变生他病，为害不小，隹马勃辛平而散，甚为稳妥。
+《备要》云：外用敷诸疮良。＜ 本草从新》释曰：每见用寒凉药敷疮者，虽愈而热毒内攻，变生他病，为害不小，惟马勃辛平而散，甚为稳妥。
 
 本品系辛散轻扬之品，故若肺无邪热者不宜用。
 
