--- a/ok/bc/bc03-0.4.10.0.0.md
+++ b/ok/bc/bc03-0.4.10.0.0.md
@@ -1,8 +1,8 @@
-### 山豆根
+### 山 豆 根
 
 **〔原文〕苦寒。泻心火以保金气，去肺、大肠之风热**。心火降，则不灼肺而金清；肺与大肠相表里，肺金清，则大肠亦清。**消肿止痛。治喉痈喉风**（1），**龈肿齿痛**，含之咽汁。**喘满热咳，腹痛下痢**，**五痔诸疮，解诸药毒，敷秃疮蛇狗蜘蛛伤，疗人马急黄**。血热极所致。**苗蔓如豆，经冬不凋**。
 
-【讲解】 （1）喉痈喉风：喉痈，指发生于喉间及其附近部位的痈疡的通称。喉风，咽喉部突然肿痛，呼吸困难，吞咽补适，痰涎壅盛，语言难出等危急证候的总称。
+【讲解】 （1）喉痈喉风：喉痈，指发生于喉间及其附近部位的痈疡的通称。喉风，咽喉部突然肿痛，呼吸困难，吞咽不适，痰涎壅盛，语言难出等危急证候的总称。
 
  **山豆根苦寒降泄，为治热毒炽盛，咽喉肿痛之要药**。为豆科植物柔枝槐（广豆根）的根。此外，尚有北豆根，为防己科多年生藤本植物蝙蝠葛的根茎。切片，生用。北豆根为北方所习用。
 
@@ -16,4 +16,4 @@
 
 苦寒之品，不宜用于脾胃虚寒，食少便溏者。    
 
-【用量用法】6 —10克，煎服，或磨汁服。外用含漱，或研末涂敷患处。
+【用量用法】   6 —10克，煎服，或磨汁服。外用含漱，或研末涂敷患处。
