--- a/ok/wk/wk14-0.6.0.0.0.md
+++ b/ok/wk/wk14-0.6.0.0.0.md
@@ -28,7 +28,7 @@ l.先天性水疝：阴囊肿大呈圆形或长圆形，偏坠一侧，触之有
 
 若面色苍黄，腹泻纳呆，脾运不健者，加黄芪、党参、焦山楂；阴囊冷者，加干姜、炒小茴香、巴戟天。
 
-2.继发性水疝：起病缓慢，阴囊肿胀，上连精索，牵拉睾丸或索肿块随之下移，下腹部抽痛不适。久则皮肤顽厚，发冷，坠胀不适，肿胀严重时，阴茎隐缩，影响排尿，脉弦、苔白。证属肝气失疏，寒湿外侵，水湿内结。
+2.继发性水疝：起病缓慢，阴囊肿胀，上连精索，牵拉睾丸或精索肿块随之下移，下腹部抽痛不适。久则皮肤顽厚，发冷，坠胀不适，肿胀严重时，阴茎隐缩，影响排尿，脉弦、苔白。证属肝气失疏，寒湿外侵，水湿内结。
 
 治法：疏肝理气，祛寒化湿。
 
@@ -58,9 +58,9 @@ l.先天性水疝：阴囊肿大呈圆形或长圆形，偏坠一侧，触之有
 
 〔应用例案〕
 
-临床治验王XX，男，5岁，1,981年10月21日初诊。左侧睾丸肿胀不适三月余。西医诊断为睾丸鞘膜积液，建议手术治疗。其母恐惧，携儿来求诊。查左侧阴囊肿大如鸡蛋，不红不热，无明显压痛，与体位无关，透光试验阳性。患儿面黄，略消瘦，脉濡，苔白。证属脾运失司，气化不利，寒湿凝聚。治以温阳健脾，化湿渗水。五苓散加减主之，处方：
+编者临床治验：王XX，男，5岁，1981年10月21日初诊。左侧睾丸肿胀不适三月余。西医诊断为睾丸鞘膜积液，建议手术治疗。其母恐惧，携儿来求诊。查左侧阴囊肿大如鸡蛋，不红不热，无明显压痛，与体位无关，透光试验阳性。患儿面黄，略消瘦，脉濡，苔白。证属脾运失司，气化不利，寒湿凝聚。治以温阳健脾，化湿渗水。五苓散加减主之，处方：
 
-桂枝4.5克 云苓6克 猪芩6克 泽泻9克 荔子核6克 巴戟天6克 车前子6克 水煎服。
+桂枝4.5克 云苓6克 猪苓6克 泽泻9克 荔子核6克 巴戟天6克 车前子6克 水煎服。
 
 10月27日二诊：服上方3剂后，肿胀明显减轻，肿物缩小，药已中病，效不更方。6剂后肿物全部消散。
 
@@ -80,4 +80,4 @@ l.先天性水疝：阴囊肿大呈圆形或长圆形，偏坠一侧，触之有
 
 2.《儒门事亲·卷二》：“水疝其状肾囊肿痛，阴汗时出，或囊肿而状如水晶，或痒而燥出黄水，或少腹中按之作水声。”
 
-3.《疡科心得集·卷中》又有一种水疝，肿痛而皮色光亮，无热无红，内有聚水，宜用针针之，引去水气则安。内服五芩等利湿之药。”
+3.《疡科心得集·卷中》“又有一种水疝，肿痛而皮色光亮，无热无红，内有聚水，宜用针针之，引去水气则安。内服五苓等利湿之药。”
