--- a/ok/ek/ek0zl05-0.1.0.0.0.md
+++ b/ok/ek/ek0zl05-0.1.0.0.0.md
@@ -34,7 +34,7 @@
 
 3.望皮肤、肌肉：小儿皮肤娇嫩；黄疸、肿胀、斑疹、痘疮反映最为明显。黄疸除辨别阳黄与阴黄以外，凡儿初生，面目通身皆黄如金色者为胎黄。肿与胀不同，全身浮肿，按之没指者为肿，或称水肿；全身消瘦，腹部鼓起而膨胀者为胀，或称疳胀；皮肤红如涂朱，为丹毒。发无定处的名赤遊丹。斑和疹都是皮肤上的病变，斑色红，点大如片，平摊于皮肤之上；疹形如粟粒，色红或高起。由于病因的不同，有麻疹和隐疹的区别。
 
-“肌肉为脾胃之气所充，观察肌肉，可以测知脾胃的盛衰，气血的有余不足。肌肉充盛的为脾胃气实；肌肉消瘦的为脾胃气虚。肥而润泽，是气血有余。瘦而干枯，为气血不足。
+肌肉为脾胃之气所充，观察肌肉，可以测知脾胃的盛衰，气血的有余不足。肌肉充盛的为脾胃气实；肌肉消瘦的为脾胃气虚。肥而润泽，是气血有余。瘦而干枯，为气血不足。
 
 4.望四肢：小儿四肢异于正常，多为病候。如胫肿、胕肿、按之凹下为水肿；单独膝关节肿大为鹤膝。手足壅肿多为实证；手足枯细多属于虚。手足软弱，不能动作而不痛为痿；关于肿或不肿而痛，四肢运动困难为痹。手、足、头、项、肌肉软弱无力者为五软。手足心冷如冰而硬，头项强不能俯视，口及肌肉硬者为五硬。小儿生下筋骨软弱，行步艰难，齿迟不生，坐不能稳，为先天禀赋不足的五迟证候。
 
@@ -50,13 +50,13 @@
 
 2.察鼻：鼻塞流清涕，为感冒风寒；鼻流黄浊涕，为感冒风热，或感冒经久向愈之征；鼻衄多为肺经有热，血热妄行；鼻内生疮糜烂，多为肺火上炎；鼻孔干燥，为肺热伤津或外感燥邪；鼻翼煽动，为肺气闭塞所致。乳婴儿鼻塞不乳，常为鼻腔分泌物或异物阻塞所致。
 
-3.察耳：小儿耳壳丰厚，颜色红润，是先天肾气充沛的表现。反之则属肾气不足或体质较差，如早产儿的耳壳即软而紧贴两颞，耳舟不清。耳内疼痛流脓，为肝胆火盛，如聤耳；耳背络脉隐现，耳尖发凉，兼身壮热多泪，常为麻疹之先兆；若以耳垂为中心的猕漫肿胀，则为痄腮的表现。
+3.察耳：小儿耳壳丰厚，颜色红润，是先天肾气充沛的表现。反之则属肾气不足或体质较差，如早产儿的耳壳即软而紧贴两颞，耳舟不清。耳内疼痛流脓，为肝胆火盛，如聤耳；耳背络脉隐现，耳尖发凉，兼身壮热多泪，常为麻疹之先兆；若以耳垂为中心的㳽漫肿胀，则为痄腮的表现。
 
 4.察口唇：唇口属脾，唇色淡白，为气血亏虚。唇色鲜红，为邪热初盛；焦红为心脾郁热。唇焦紫黑，为血热伤阴。环唇青色，主肝木乘脾，须防抽搐惊掣。唇红肿痛，是脾经火热上炽。唇内及舌面出现白点，多是虫积。
 
 5.察齿、龈：小儿出生后，五到十个月出现乳齿，如生长过晚为齿迟，属五迟之一。叶天士云：齿为肾之余，龈为胃之络，小儿病看舌后，亦须验齿，热邪耗肾液者，齿色必黄。黄如酱瓣，宜救肾为要；热邪耗胃津者，齿色必紫，紫如干漆，宜安胃为主。若干燥如枯骨，是肾的津气耗竭。齿缝出血，多属胃热上冲，或血弱而虚火上浮，睡中齘齿，多属胃中有热，消化不良或虫积所致；若咬牙齘齿严重，须防急惊痉厥。但咬不啮，为热甚而牙关紧急。牙齿疼痛，须防龋齿。牙龈红肿疼痛，在初生儿称为重龈，是脾胃积热；龈根突出白点称为马牙。如有溃烂，须防走马牙疳。齿焦者，肾液枯；无垢者，胃阴竭。
 
-6.察咽喉、腮、颚：咽喉是呼吸饮食的门户，与肺胃相通，关系至大；而乳蛾，喉痧，白喉等病，又多见于小儿，所诊小儿必须观察咽喉。凡吞嚥困难及疼痛，一侧或双侧红肿如蛾，或兼有发热的，是为乳蛾。扁桃体炎若红烂疼痛，同时发壮热而全身出现丹痧的为烂喉痧。如喉部肿痛或梗塞不通，有灰色的假膜，剔之难去，蔓延甚速的，是为白喉。若咽部潮热千痛、声音嘶嗄，或悬壅垂红肿不坠，吞咽困难疼痛的，多因口腔不洁，感染热毒所引起。
+6.察咽喉、腮、颚：咽喉是呼吸饮食的门户，与肺胃相通，关系至大；而乳蛾，喉痧，白喉等病，又多见于小儿，所诊小儿必须观察咽喉。凡吞嚥困难及疼痛，一侧或双侧红肿如蛾，或兼有发热的，是为乳蛾。扁桃体炎若红烂疼痛，同时发壮热而全身出现丹痧的为烂喉痧。如喉部肿痛或梗塞不通，有灰色的假膜，剔之难去，蔓延甚速的，是为白喉。若咽部潮热干痛、声音嘶嗄，或悬壅垂红肿不坠，吞咽困难疼痛的，多因口腔不洁，感染热毒所引起。
 
 7.察腮颊：上颚等出现白色溃烂小点的，称为口疮，苔腮颚满口糜烂，色红而疼痛，称为口糜，上颚肿起如水泡，称为上颚痈。腮颚舌上满布白屑，状如鹅口，称为鹅口疮；若两颊粘膜有小白点，周围红晕，为麻疹粘膜斑。
 
@@ -68,7 +68,7 @@
 
 （3）舌苔：舌苔色白为寒；舌苔白腻为寒湿内滞，或寒痰与食积所致；舌苔燥黄为里热已炽；舌苔黄腻为湿热内蕴，或乳食内停；热性病而见剥苔，多为阴伤津亏所致；小儿舌苔花剥，经久不愈，状如“地图”，多为胃之气阴不足所致，若见舌苔厚腻垢浊不化，伴便秘腹胀者，为宿食内滞，中焦气机阻塞，这种舌苔亦称“霉酱苔”。新生儿舌红无苔和乳婴儿的乳白苔，均属正常现象。此外小儿因吃某些药品、食物，往往舌苔被染，如吃红色糖果可呈红苔，吃橄榄、杨梅、茶叶呈黑苔，吃桔子水，蛋黄呈黄苔等，均不属病苔。染苔的色泽比较鲜艳而浮浅，与病苔不同，发现疑问，稍加追查，不难弄清。
 
-在观察小儿舌象时，还应注意小儿伸舌的姿势。若舌尖上翘，则可造成舌类和舌边淡红，还有的小儿舌体仅伸出一半，也会影响观察。
+在观察小儿舌象时，还应注意小儿伸舌的姿势。若舌尖上翘，则可造成舌尖和舌边淡红，还有的小儿舌体仅伸出一半，也会影响观察。
 
 9.察二阴：前明指生殖器和尿道口，男孩阴囊不紧不松，稍有色素沉着者，是正常状态，为肾气充沛的表现。若阴囊松弛，色淡白者，多为体虚或发热之象；阴囊紧缩多为寒，阴囊时肿时复，啼哭肿大加甚，为疝气的表现；阴囊阴茎均肿，常为阴水的表现。女孩前阴红赤而湿，多属下焦湿热；若前阴潮湿瘙痒，须注意滴虫病。男孩尿道口发红，小便淋漓，也属湿热下注。小儿肛门潮湿红痛，证属“肛臀”；大便坚硬带鲜血，常为肛裂；便后直肠脱出，多属中气虚亏，见于脱肛。如舌卷囊缩，为肝肾气绝。
 
@@ -88,7 +88,7 @@
 
 （3）痰饮：即来自肺、肺系（气管）的分泌物，由咳嗽经喉、口而排出。痰白清稀成液者，大多属寒证。痰黄稠粘者，多为热证。咳吐脓血，状如米粥者，大多见于热毒壅盛之肺痈。痰中带血，血色鲜红者，为热伤肺络，如小儿肺痨等病中常见。
 
-（4）呕吐物：多指来自胃中的食物和分泌物。如呕吐物不化，朝食暮吐，等面白肢冷者为寒吐。食入即吐，呈喷射状，呕吐物酸臭，伴渴喜凉饮者为热吐。婴幼儿惊恐呕吐，呕吐物常是清涎，伴睡卧惊惕等证，不难区别。
+（4）呕吐物：多指来自胃中的食物和分泌物。如呕吐物不化，朝食暮吐，兼面白肢冷者为寒吐。食入即吐，呈喷射状，呕吐物酸臭，伴渴喜凉饮者为热吐。婴幼儿惊恐呕吐，呕吐物常是清涎，伴睡卧惊惕等证，不难区别。
 
 （5）望脐部：有无脐湿、脐疮、脐血、脐突等疾患。
 
