update ok/fjx/fjx04-0.2.0.0.0.md. 煮取三怀  改为 煮取三杯

--- a/ok/fjx/fjx04-0.2.0.0.0.md
+++ b/ok/fjx/fjx04-0.2.0.0.0.md
@@ -2,7 +2,7 @@
 
 〔组成〕犀角三钱（9克） 生地黄五钱（15克） 玄参三钱（15克）竹叶心一钱（12克） 麦冬三钱（15克） 丹参二钱（10克） 黄连一钱五分（12克） 银花三钱（15克） 连翘连心用二钱（15克）
 
-〔服法〕水八杯，煮取三怀，日三服。（水煎服）
+〔服法〕水八杯，煮取三杯，日三服。（水煎服）
 
 〔讲解〕本方主治邪热由气分初入营分，发生神昏谵语之症。本方是清营透热的代表方，所以叫清营汤。邪入营分，热伤营阴，夜属阴，故身热夜甚；邪热入营，蒸腾营气上升，上潮于口，故口反不渴；营气通于心，邪热入营，灼及心包，心神被扰，故心烦不眠，甚则及有谵语。热入营血，血热妄行，轻伤血络，溢于肌肤，则发为斑疹隐隐。舌为心苗，心主营，营分有热，故舌绛无苔。
 
