update ok/wk/wk15-0.8.0.0.0.md. 原文有“患从鼠牒起，至踝”，应为“患从鼠𦡧起，至踝”，电子版已改。

--- a/ok/wk/wk15-0.8.0.0.0.md
+++ b/ok/wk/wk15-0.8.0.0.0.md
@@ -68,7 +68,7 @@
 
 1.《肘后备急方•卷五》：“皮肉卒肿起，狭长赤痛，名䐔”。（此为䐔病最早记载）
 
-2.《诸病源候论•卷三十三》：“䐔病者，由劳役，肢体热盛，自取风冷，而为凉湿所折，入於肌肉筋脉，结聚所成也。其状赤脉，起如编绳，急痛壮热，其发于脚者，患从鼠牒起，至踝，亦如编绳，故谓䐔病也。”（对病因、症状描述较具体）
+2.《诸病源候论•卷三十三》：“䐔病者，由劳役，肢体热盛，自取风冷，而为凉湿所折，入於肌肉筋脉，结聚所成也。其状赤脉，起如编绳，急痛壮热，其发于脚者，患从鼠𦡧起，至踝，亦如编绳，故谓䐔病也。”（对病因、症状描述较具体）
 
 3.《备急千金要方•卷第二十二瘭疽第六》：“凡䐔病喜发四肢，其状赤脉，起如编绳，急痛壮热。其发于脚，喜从腨起至踝，亦如编绳，故云䐔病也。发于臂喜着腋下。皆由久劳，热气盛为湿凉所折，气结筋中，成此病也。”（此对病机认识较准确，症状亦更具体）
 
