--- a/ok/wk/wk14-0.7.0.0.0.md
+++ b/ok/wk/wk14-0.7.0.0.0.md
@@ -10,7 +10,7 @@
 
 （一）辨证要领
 
-一是触诊以辨是否夹瘀，如果结块坚硬，不可活动者，多兼瘀血。二是问诊以明主症，如果阴茎勃起疼痛，弯曲，勃起不坚，但松弛时则无不适症状便可诊断为本病。
+一是触诊以辨是否夹瘀，如果结块坚硬，不可活动者，多兼瘀血。二是问诊以明主症，如果阴茎勃起疼痛，弯曲，勃起不坚，但松弛时则无不适症状，便可诊断为本病。
 
 （二）论治要点
 
@@ -18,13 +18,13 @@
 
 （三）常见证治
 
-患者常有会阴不适下坠感，排尿时轻微刺痛，部分患者排尿不畅。阴茎背部可触及单个或多个硬结，硬结边界清楚，活动度小，发展缓慢，但终不溃烂，亦不引起恶变。性生活时可出现勃起疼痛，勃起不坚和勃起弯曲，严重者可有阳痿。证属厥阴气滞，痰瘀互结。
+主症：患者常有会阴不适下坠感，排尿时轻微刺痛，部分患者排尿不畅。阴茎背部可触及单个或多个硬结，硬结边界清楚，活动度小，发展缓慢，但终不溃烂，亦不引起恶变。性生活时可出现勃起疼痛，勃起不坚和勃起弯曲，严重者可有阳痿。证属厥阴气滞，痰瘀互结。
 
 治法：化痰散结，理气活血。
 
 方药：化坚二陈汤去黄连，加白芥子、川牛膝、丹参、莪术、落得打。
 
-若排尿疼痛者加乳香、没药；排尿困难者，加泽泻、车前子；结节坚硬难消者，加炮甲珠，海藻。
+若排尿疼痛者，加乳香、没药；排尿困难者，加泽泻、车前子；结节坚硬难消者，加炮甲珠，海藻。
 
 （四）外治法
 
@@ -46,4 +46,4 @@
 
  〔文献摘录〕
 
-《中医疾病学》：阴茎海绵体硬结症，又称阴茎海绵体纤维化，并可进一步发展为阴茎钙化或骨化的可能。西医对本病的病因不明，说法不一。中医据证求因，当属，阴血不济痰浊结骤而成，……从笔者治疗几例的情况看，本症罹病前多有寒湿困遏病史，再根据患者的体质和生活上的差异，逐渐演变城肝肾精血亏损、精血化成痰而为硬节。或脾气虚损，津液运化不及，凝结成痰发为硬结。硬结既成，一般治疗又难见效，故心情抑郁、苦恼加剧；情志内结，气机不畅，致使津液精血愈结愈硬，愈结愈大：（也有同时生二、三个硬结者），愈结愈牢。
+《中医疾病学》：阴茎海绵体硬结症，又称阴茎海绵体纤维化，并可进一步发展为阴茎钙化或骨化的可能。西医对本病的病因不明，说法不一。中医据证求因，当属阴血不济痰浊结骤而成，……从笔者治疗几例的情况看，本症罹病前多有寒湿困遏病史，再根据患者的体质和生活上的差异，逐渐演变成肝肾精血亏损、精血化成痰而为硬节。或脾气虚损，津液运化不及，凝结成痰发为硬结。硬结既成，一般治疗又难见效，故心情抑郁、苦恼加剧；情志内结，气机不畅，致使津液精血愈结愈硬，愈结愈大：（也有同时生二、三个硬结者），愈结愈牢。
