update ok/fjx/fjx04-0.3.0.0.0.md. 甚或用水牛角弋  “弋”改为“代”

--- a/ok/fjx/fjx04-0.3.0.0.0.md
+++ b/ok/fjx/fjx04-0.3.0.0.0.md
@@ -10,7 +10,7 @@
 
 其次，还可用于急性白血病、原发性血小板减少性紫瘢、急性黄色肝萎缩、肝昏迷、尿毒症、各种败血症、疔疮肿毒等出现高热、出血而属于血热者。也可用于烧伤，多加玄参、黄连以清热解毒。
 
-在临床运用上，多将白芍改赤芍，因为赤芍功能清营凉血、活血去瘀，治疗热病出血、发斑的作用，较白芍为优。若热伤阴血较甚，则可用白芍。犀角多以广角10克代替，甚或用水牛角弋。多用生地、白芍、丹皮也有效。例如生地60克、麦冬30克、生草10克、白芍30克、丹皮15克。吐衄者，加茅根、侧柏叶、旱莲草以凉血止血；便血者，加地榆、槐花以清肠止血；尿血者，加茅根、小蓟以利尿止血；心火盛者，加黄连、焦栀子以加强清心泻火作用。
+在临床运用上，多将白芍改赤芍，因为赤芍功能清营凉血、活血去瘀，治疗热病出血、发斑的作用，较白芍为优。若热伤阴血较甚，则可用白芍。犀角多以广角10克代替，甚或用水牛角代。多用生地、白芍、丹皮也有效。例如生地60克、麦冬30克、生草10克、白芍30克、丹皮15克。吐衄者，加茅根、侧柏叶、旱莲草以凉血止血；便血者，加地榆、槐花以清肠止血；尿血者，加茅根、小蓟以利尿止血；心火盛者，加黄连、焦栀子以加强清心泻火作用。
 
 本方与清营汤均以犀角、生地为重，用治热入营血之身热夜甚，烦躁不眠，昏谵舌绛等症。然本方纯由血分药组成，清热凉血中辅以散瘀之品，用治热盛动血之症；清营汤则于清营泄热中配以清气药，使透热转气，气营两清，以防邪陷心包或热盛动血，所以治邪热初入营分之证。
 
