update ok/fjx/fjx04-0.4.0.0.0.md. 分二服（水煎服).   ).改为）。

--- a/ok/fjx/fjx04-0.4.0.0.0.md
+++ b/ok/fjx/fjx04-0.4.0.0.0.md
@@ -2,7 +2,7 @@
 
 〔组成〕黄连三两（10克） 黄芩（6克） 黄柏各二两（6克） 栀子劈十四枚（10克）
 
-〔服法〕原方四味切，以水六升，煮取二升，分二服（水煎服).
+〔服法〕原方四味切，以水六升，煮取二升，分二服（水煎服）。
 
 〔讲解〕本方主治热毒壅盛三焦，尤以气分热炽，发生口舌腐烂者为宜。它是一首强有力的清热燥湿、泻火解毒剂。方用黄连泻心解火毒，兼泻中焦之火为君，并以其功效名方。因心主神明，火主于心，泻火必先清心，心火宁则诸火自降。《内经》云：“诸痛痒疮，皆属于心”，泻心火则疼痛疮痒可愈。辅以黄芩泻上焦之火以为臣，佐以黄柏泻下焦之火；栀子通泻三焦之火，导热下行以除烦而为使。四药合用，苦寒直折，作用迅速，对热病高热，口干烦躁，谵语不安以及实热下痢等症，均有顿挫之力。不过一定要见到唇焦、口渴咽干、舌质红绛、苔灰黄腻厚、脉数有力等实热脉症方可使用。倘若苔白，热不高者，误用本方，便可引起汗出、昏睡，甚至虚脱等不良后果，不可不慎！
 
