update ok/fjx/fjx04-0.5.0.0.0.md. 连翘〈10克）  〈改为（ 在使用本方同时,   ,改为，

--- a/ok/fjx/fjx04-0.5.0.0.0.md
+++ b/ok/fjx/fjx04-0.5.0.0.0.md
@@ -1,6 +1,6 @@
 ## 普济消毒饮《医方集解》
 
-〔组成〕黄芩酒炒（10克） 黄连酒炒（10克）各五钱  陈皮去白（6克） 甘草生用（6克） 玄参（10克） 柴胡（6克） 桔梗各二钱（6克） 连翘〈10克） 板蓝根（10克） 马勃（6克） 牛蒡子（10克） 薄荷各一钱（10克） 僵蚕（10克） 升麻各七分（2克）
+〔组成〕黄芩酒炒（10克） 黄连酒炒（10克）各五钱  陈皮去白（6克） 甘草生用（6克） 玄参（10克） 柴胡（6克） 桔梗各二钱（6克） 连翘（10克） 板蓝根（10克） 马勃（6克） 牛蒡子（10克） 薄荷各一钱（10克） 僵蚕（10克） 升麻各七分（2克）
 
 〔服法〕原方为末，汤调，时时服之，或蜜拌为丸，噙化。（水煎服）
 
@@ -16,6 +16,6 @@
 
 如表证明显，里热不甚者，可减芩、连，加蝉衣、芥穗；里热盛者，可加银花、青黛，鲜芦根煎汤；大便燥结，加瓜蒌、大黄；肿硬难消者，加赤芍、丹皮、土贝母、夏枯草；合并睾丸肿痛，加川楝子、龙胆草。
 
-在使用本方同时,可局部外敷梅花点舌丹，醋调用。
+在使用本方同时，可局部外敷梅花点舌丹，醋调用。
 
 〔方论选录〕王子接：“时行疫疠，目赤肿痛胞烂者，属湿热；憎寒壮热，头面胀者，属风热。此皆邪发于手之阴者也。……黄芩、黄连、连翘、玄参泻心肺之热为君；人参、桔红负荷其正，驱逐其邪为医；升麻、柴胡伸少阳、阳明之正气，桔梗、甘草载引诸药不令下行为佐；牛蒡散风消毒，僵蚕消风散结，板蓝根解天行热毒，马勃消头面肿毒，使药四味，为诸药驱使于上焦，以成消散之功。手经病在上，故不用下法。”（《古方选注》）
