update ok/fjx/fjx04-0.6.0.0.0.md. 可加黄连（或马尾连)  )改为）

--- a/ok/fjx/fjx04-0.6.0.0.0.md
+++ b/ok/fjx/fjx04-0.6.0.0.0.md
@@ -10,6 +10,6 @@
 
 〔临证应用〕本方主治阴虚有热，而阴虚不甚，症见口渴面赤，心胸烦热，白睛赤色，口糜舌疮，咬牙，寐不安，喜伏卧，或心热下移小肠，小便赤热，尿时刺痛，尿色深红，赤浊或白浊，舌尖红，苔黄，脉细数滑者。
 
-心经实热盛，口疮，小儿吐舌弄舌者，可加黄连（或马尾连)，连翘、黄芩、焦栀，随证选用一、二味即可。血热尿血可加丹皮、茅根以凉血止血。阴虚甚加麦冬、玄参以滋胃液、养心阴。血淋涩痛，挟有血块，疼痛满急加剧，加旱莲草、小蓟、琥珀、瞿麦以清热凉血、去瘀通淋。如兼暑湿或欲加强渗湿泄热作用可加滑石。湿热下注，小便数急刺痛，可加茅根，海金沙、小蓟以通淋清热。偏心经虚热或体虚者，可加太子参、莲子心以益气清心。
+心经实热盛，口疮，小儿吐舌弄舌者，可加黄连（或马尾连），连翘、黄芩、焦栀，随证选用一、二味即可。血热尿血可加丹皮、茅根以凉血止血。阴虚甚加麦冬、玄参以滋胃液、养心阴。血淋涩痛，挟有血块，疼痛满急加剧，加旱莲草、小蓟、琥珀、瞿麦以清热凉血、去瘀通淋。如兼暑湿或欲加强渗湿泄热作用可加滑石。湿热下注，小便数急刺痛，可加茅根，海金沙、小蓟以通淋清热。偏心经虚热或体虚者，可加太子参、莲子心以益气清心。
 
 〔方论选录〕吴谦等：“导赤者，导心经之热从小肠而出，以心与小肠为表里也。然所见口糜舌疮、小便黄赤，茎中作痛，热淋下利等证，皆心热移于小肠之证，故不用黄连直泻其心，而用生地滋肾凉心，木通通利小便，佐以甘草梢，取其泻最下之热，茎中之痛可除，心经之热可导也。此则水虚火不实者宜之，以利水而不伤阴，泻火而不伐胃也。若心经实热，须加黄连、竹叶，甚者更加大黄，亦釜底抽薪之法也”。（《删补名医方论》）
