update ok/fjx/fjx04-0.7.0.0.0.md. 宜加焦栀， ，改为、

--- a/ok/fjx/fjx04-0.7.0.0.0.md
+++ b/ok/fjx/fjx04-0.7.0.0.0.md
@@ -10,7 +10,7 @@
 
 〔临证应用〕本方适用于肺热阴伤不太甚的喘咳痰粘、皮肤蒸热，盗汗、午后热甚，舌红苔黄，脉细数者。对肺气不降而致小便不利者，用之也有良效。但风寒表证喘咳忌用，不然，如油入面，将成邪结难解之劳怯，故用时宜慎。
 
-热甚烦躁咳嗽者，宜加焦栀，酒芩、知母以清泄里热；燥热咳甚有痰者，加麦冬、瓜蒌、川贝润肺止咳；烦热口渴，加花粉、知母清热生津。肝火灼肺，咳则胁痛，不能转侧，甚则咳血，或痰挟血丝，咳嗽夜重者，名“木扣金鸣”，加焦栀、黛蛤散、桑叶、枇杷叶、茅根、丹皮等，收效尤捷。
+热甚烦躁咳嗽者，宜加焦栀、酒芩、知母以清泄里热；燥热咳甚有痰者，加麦冬、瓜蒌、川贝润肺止咳；烦热口渴，加花粉、知母清热生津。肝火灼肺，咳则胁痛，不能转侧，甚则咳血，或痰挟血丝，咳嗽夜重者，名“木扣金鸣”，加焦栀、黛蛤散、桑叶、枇杷叶、茅根、丹皮等，收效尤捷。
 
 本方与千金苇茎汤（苇茎、薏苡仁、冬瓜仁、桃仁）均有清肺热之效，但苇茎汤兼逐瘀排脓，用治肺热成痈；本方兼泻肺气，用治肺热气壅之喘咳。
 
