--- a/ok/ek/ek0zl07-0.3.0.0.0.md
+++ b/ok/ek/ek0zl07-0.3.0.0.0.md
@@ -6,7 +6,7 @@
 
 表证有风寒、风热的区别，解表法又有辛温解表和辛凉解表两类。
 
-辛温解表法，适用于外感风寒表证，如发热、恶寒、流涕、赅嗽等，宜用荆芥、防风、陈皮、苏叶、葱白等药，常用方剂，如葱豉汤，杏苏散、参苏饮之类。
+辛温解表法，适用于外感风寒表证，如发热、恶寒、流涕、咳嗽等，宜用荆芥、防风、陈皮、苏叶、葱白等药，常用方剂，如葱豉汤，杏苏散、参苏饮之类。
 
 辛凉解表法，适用于外感风热或温病邪在卫分，证见身热头痛，微恶风寒，有汗口渴，咽疼等，宜用银花、连翘、薄荷、蝉衣、竹叶、桑叶、菊花、牛蒡子等药，常用的方剂如银翘散、桑菊饮之类。
 
@@ -26,11 +26,11 @@
 
 8.安蛔驱虫法：主要适用于肠道虫证，如蛔虫、蛲虫等。其中尤以蛔虫变化多端，可合併胆道蛔虫证、蛔虫性肠梗阻等，发生这些情况，若用猛烈驱虫药，反易造成虫体躁扰，加重病情，此时当先安蛔缓痛为主，方用乌梅丸，蛔厥吐蛔，昏不知人，亦用乌梅丸。如唇红口渴证见热象者，用连梅安蛔汤；如形寒肢冷，便溏呕吐者，用理中安蛔汤，待病势缓和后，再予驱虫。常用驱蛔方剂，有追虫丸、下虫丸等。驱蛔虫有效中药如使君子、苦楝根白皮等；驱姜片虫有槟榔等；驱蛲虫有蛲虫散（使君子粉7份，生大黄1份制成），配合百部煎剂灌肠等。
 
-9.利水消肿法：主要用于水湿停聚，小便短少而水肿的患儿。若为湿邪内蕴，郁而化热，水湿泛于肌肤，口渴尿赤者，则为阳水；若脾肾阳虚，不能化气行水，脾失健运，水湿内聚为肿，则为阴水。常用方剂，若阳水可用茵陈五苓散、麻杏五皮饮、越婢加术汤等发汗似利尿。若阴水可用防己黄芪汤加附片（少量），真武汤等补气行湿、温阳科尿。此外，如冬瓜皮、大蒜子、车前草、荠菜花、苡米根等也有较好的利尿消肿作用。
+9.利水消肿法：主要用于水湿停聚，小便短少而水肿的患儿。若为湿邪内蕴，郁而化热，水湿泛于肌肤，口渴尿赤者，则为阳水；若脾肾阳虚，不能化气行水，脾失健运，水湿内聚为肿，则为阴水。常用方剂，若阳水可用茵陈五苓散、麻杏五皮饮、越婢加术汤等发汗似利尿。若阴水可用防己黄芪汤加附片（少量），真武汤等补气行湿、温阳利尿。此外，如冬瓜皮、大蒜子、车前草、荠菜花、苡米根等也有较好的利尿消肿作用。
 
-10.健脾益气法：主要适用于脾胃虚弱，气虚不足的小儿，如婴儿腹泻、疳证及病后体虚等。常用方剂如七味白术散、四君子汤、异功散，参苓白术散、补中益气汤等。白术、鸡内金等分研细冲服，有健脾助化作用，单味淮山药粉调服，有良好的徤脾止泻作用，为儿科常用药物。气虚与脾虚，关系密切，治气虚多从健脾着手。健脾时又多借助补气，故两者常配合运用，如四君、六君之类。
+10.健脾益气法：主要适用于脾胃虚弱，气虚不足的小儿，如婴儿腹泻、疳证及病后体虚等。常用方剂如七味白术散、四君子汤、异功散，参苓白术散、补中益气汤等。白术、鸡内金等分研细冲服，有健脾助化作用，单味淮山药粉调服，有良好的健脾止泻作用，为儿科常用药物。气虚与脾虚，关系密切，治气虚多从健脾着手。健脾时又多借助补气，故两者常配合运用，如四君、六君之类。
 
-11.活血化瘀法：主要适用于各种瘀血之证。如久痛久胀入络，口唇青紫，漱水不欲嚥，肌肤有瘀斑，瘀点，以及胸腹满痛如针刺，痛有定处等，为瘀血阻络之征。常用方剂如桃红四物汤、三仁绛复汤、失笑散等。基于“气为血之帅，气行则血”，故活血化瘀中，常辅以益气行气的药物。如兼血热瘀阻则配丹参、丹皮；血寒瘀阻则配肉桂、延胡。
+11.活血化瘀法：主要适用于各种瘀血之证。如久痛久胀入络，口唇青紫，漱水不欲嚥，肌肤有瘀斑，瘀点，以及胸腹满痛如针刺，痛有定处等，为瘀血阻络之征。常用方剂如桃红四物汤、三仁绛复汤、失笑散等。基于“气为血之帅，气行则血行”，故活血化瘀中，常辅以益气行气的药物。如兼血热瘀阻则配丹参、丹皮；血寒瘀阻则配肉桂、延胡。
 
 12.培元补肾法：主要适用于小儿胎禀不足，肾气虚弱及肾不纳气之证，如解颅、五迟、五软、智力差、哮喘、遗尿等。常用方剂如六味地黄丸、金匮肾气丸、荔枝、蛤蚧、胎盘粉等。
 
@@ -52,7 +52,7 @@
 
 7.括痧放血法：用细瓷碗口蘸清油括背部夹脊两旁近胸腹处，连括数次后，局部起紫黑肿块，病的自觉症状即见缓解的一种急救疗法。适用于小儿中恶发痧，腹痛昏沉，四肢末梢乌紫，括后腹痛缓解，人即清醒。如危重者可配合针刺十宣穴（即双手指尖），促进循环，以开通闭塞。
 
-8.灯火疗法：亦称“灯火燋法”，是火灸的一种，古人用以治疗脐风，惊痫抽搐，以及突然卒死、风痰闭证。能够疏风散表、行气利痰，解郁开胸，醒神定搐，对于小儿经络凝滞，脏气不舒之证，以火散之，起到脏气流通，营卫宣畅的作用。其方法以灯芯蘸麻油燃火，以烧灼所选定的穴位或部位，手法必须迅速，一触及皮肤便即离去。其取穴方法例如《幼科铁镜》中取囟门、眉心、人中、承浆、两手大指少商、脐心、脐轮（六燋）共十三燋，治疗胶风。但对邪已入里的实热证，久病体弱，久热消渴的虚热神烦，阴血亏虚等证，均禁用此法。
+8.灯火疗法：亦称“灯火燋法”，是火灸的一种，古人用以治疗脐风，惊痫抽搐，以及突然卒死、风痰闭证。能够疏风散表、行气利痰，解郁开胸，醒神定搐，对于小儿经络凝滞，脏气不舒之证，以火散之，起到脏气流通，营卫宣畅的作用。其方法以灯芯蘸麻油燃火，以烧灼所选定的穴位或部位，手法必须迅速，一触及皮肤便即离去。其取穴方法例如《幼科铁镜》中取囟门、眉心、人中、承浆、两手大指少商、脐心、脐轮（六燋）共十三燋，治疗脐风。但对邪已入里的实热证，久病体弱，久热消渴的虚热神烦，阴血亏虚等证，均禁用此法。
 
 9.揉羊毛疔法：用生面粉、鸡蛋白、白酒各适量和匀成团如鸡蛋大，置小儿胸部顺手揉动，30〜40圈后，撕开面团在光照中可见到丝状物如羊毛，色白而靭，如见棕褐色则病情较重。此法来自民间，适用于小儿发热呕吐，水入则吐，如喷射状。烦躁不安，用面团反复揉胸——即胃之上脘后，再给五花地丁饮加味（银花、菊花、蒲公英、紫背天葵、天丁、地丁、白蔻、芦根、桔皮、竹茹）煎汤，另用锈铁一块烧红置碗内加黄连1克开水淬成50毫升，分数次兑药服，但每次只给服5〜10毫升，小量呷服，以呕止为度。
 
