update ok/fjx/fjx04-0.8.0.0.0.md. 待冷服之．．改为。 大肠经络下牙齦 “齦”改为“龈” 也厲阳明 “厲”改为“属” 则牙龈红肿溃烂,   ,改为，

--- a/ok/fjx/fjx04-0.8.0.0.0.md
+++ b/ok/fjx/fjx04-0.8.0.0.0.md
@@ -2,9 +2,9 @@
 
 〔组成〕当归身三分（6克） 黄连六分，如连不好，更加二分，夏月倍之，（12克） 生地黄酒制三分（6克） 牡丹皮五分（10克）升麻一钱（20克）
 
-〔服法〕原方为细末，都作一服，水一盏半，煎至一盏，去渣，待冷服之．（水煎服）
+〔服法〕原方为细末，都作一服，水一盏半，煎至一盏，去渣，待冷服之。（水煎服）
 
-〔讲解〕本方为治胃经湿热所致牙痛之方。本证多由于过食煎炒炙煿，积生胃热；或因过服补药，致使火气上攻。阳明胃之经脉循面颊，并绕口唇，入上牙龈，故胃火上攻则腮颊唇口肿痛，上牙疼痛。大肠经络下牙齦，也厲阳明，故胃热多兼大肠热，而上下牙全疼，或兼大便燥结；牙疼遇冷则减，得热则剧，故喜冷恶热；口干舌燥为热伤津液；热伤血络，则牙宣出血；热蒸肉腐，则牙龈红肿溃烂,口气热臭。方用黄连为君，苦泻胃火，臣以生地、丹皮清热养阴，除血中伏火，协黄连以清胃，并凉血止血。佐当归身养血活血，消肿止痛，更用升麻清热散结，因它又为阳明经引经药，可引诸药直达病所，是为佐使药。升麻配黄连，则散火而无升阳之虑，黄连配升麻，则泻火而无凉遏之弊。两药配伍，清上彻下，使火散热降，则胃热清而牙疼止。诸药配谷，寓“欲降先升”、“升清降浊”之义，有清泻胃火，凉血止痛之效。
+〔讲解〕本方为治胃经湿热所致牙痛之方。本证多由于过食煎炒炙煿，积生胃热；或因过服补药，致使火气上攻。阳明胃之经脉循面颊，并绕口唇，入上牙龈，故胃火上攻则腮颊唇口肿痛，上牙疼痛。大肠经络下牙龈，也属阳明，故胃热多兼大肠热，而上下牙全疼，或兼大便燥结；牙疼遇冷则减，得热则剧，故喜冷恶热；口干舌燥为热伤津液；热伤血络，则牙宣出血；热蒸肉腐，则牙龈红肿溃烂，口气热臭。方用黄连为君，苦泻胃火，臣以生地、丹皮清热养阴，除血中伏火，协黄连以清胃，并凉血止血。佐当归身养血活血，消肿止痛，更用升麻清热散结，因它又为阳明经引经药，可引诸药直达病所，是为佐使药。升麻配黄连，则散火而无升阳之虑，黄连配升麻，则泻火而无凉遏之弊。两药配伍，清上彻下，使火散热降，则胃热清而牙疼止。诸药配谷，寓“欲降先升”、“升清降浊”之义，有清泻胃火，凉血止痛之效。
 
 〔临证应用〕本方以治胃火上攻或血热火郁牙痛颊肿为主，凡属胃经湿热最为适用。临床常见上下牙痛，牵引头脑，满面发热，其牙喜寒恶热，或牙龈红肿溃烂，牙宣出血，或口气热臭，或唇口腮颊肿痛，口干舌燥，舌红苔黄，脉滑大而数者。如牙宣出血不疼不肿而属肾中虚热者，可用六味地黄丸加侧柏叶；肾阴不足，胃火炽盛的牙痛，宜用玉女煎，而非本方所宜。
 
