--- a/ok/wk/wk14-0.8.0.0.0.md
+++ b/ok/wk/wk14-0.8.0.0.0.md
@@ -6,7 +6,7 @@
 
 〔病因病机〕
 
-急性者多由嗜酒太过，脾胃受伤，湿热内生，气血凝滞，导致膀胱气化不利而成。诱因或为体表疖肿，乳蛾喉痛等证引起湿热下注而发。或因尿道下部染毒，或由留置导尿管引发。慢性者可由急性迁延而致；或因房事过渡，或有手淫恶习，劳伤精气，使精室不能闭藏而发。
+急性者多由嗜酒太过，脾胃受伤，湿热内生，气血凝滞，导致膀胱气化不利而成。诱因或为体表疖肿，乳蛾喉痛等证引起湿热下注而发。或因尿道下部染毒，或由留置导尿管引发。慢性者可由急性迁延而致；或因房事过度，或有手淫恶习，劳伤精气，使精室不能闭藏而发。
 
 〔辨证论治〕
 
@@ -56,20 +56,20 @@
 
 1.金黄散15~30克，山芋粉或藕粉适量，水200毫升，调煮成薄糊状，微冷后（43℃）作保留灌肠，每日一次。
 
-2.葱归溻肿汤坐浴，，每次20分钟；每日2~3次。
+2.葱归溻肿汤坐浴，每次20分钟；每日2~3次。
 
 （五）临证权变
 
-慢性前列腺炎日久之后多有腰痛，可加用杜仲、桑寄生；偏阳虚者，再加附子、干姜；还有小便频数者，加金樱子、复盆子、桑嫖峭；若有并发血精者，依下节论治。
+慢性前列腺炎日久之后多有腰痛，可加用杜仲、桑寄生；偏阳虚者，再加附子、干姜；还有小便频数者，加金樱子、复盆子、桑螵蛸；若有并发血精者，依下节论治。
 
 〔应用例案〕
 
-任XX，男，31岁，1972年11月7日初诊。从1971年5月，无明显诱因而自觉腰部酸痛，掣引双股，少腹胀满，小便频数；排尿终末有白浊滴出，轻度涩痛，倦怠乏力，常有头晕、目眩、心悸耳鸣。曾根据前列腺检查，诊为慢性前列腺炎。既往有高血压病史。检查：血压160/85毫米汞柱，面色苍白。舌苔薄白、脉沉迟。证属肾虚阳亏，寒湿凝滞。治宜平肝潜阳，散瘀开窍，利水祛浊。方药；珍珠母30克、归尾10克、赤芍10克、生磁石30克、菖蒲12克、猪苓10克、生石决明30克、泽泻10克，云苓10克、琥珀面2.4克（冲）、车前子10克、甘草3克。11月22日复诊：按上方服药14剂后，自觉头晕、耳鸣及心悸目眩均减轻，腰痠痛及尿频亦见好转，仍觉倦怠无力，排尿终末尚有白浊滴出。血压150/70毫米汞柱，舌苍薄白，脉沉细。改用平肝温肾、散寒利水之法，方药：珍珠母30克、菊花15克、猪苓10克，上肉桂60克、泽泻10克、萹蓄10克、紫石英30克、牛膝10克、归尾10克、车前子10克、川芎10克、琥珀面2.4克（冲）。12月7日三诊：14剂后，头晕目眩已止，偶有耳鸣，腰仍痠痛，已无尿痛及白浊，血压140/80毫米汞柱，舌苔薄白，脉沉细弱，两尺更弱。再以补肾柔肝，活血利湿之法治其本。方药：菟丝子18克、芡实15克、杜仲10克、枸杞子24克、归尾12克、川断18克、杭白芍15克、泽泻12克、牛膝10克、上肉桂10克、车前子10克、云苓10克。另服肾气丸，早晚各服一丸。按上法辨证加减，至1973年1月26日复诊，诸证悉愈。随访三年，未再复发。
+任XX，男，31岁，1972年11月7日初诊。从1971年5月，无明显诱因而自觉腰部酸痛，掣引双股，少腹胀满，小便频数，排尿终末有白浊滴出，轻度涩痛，倦怠乏力，常有头晕、目眩、心悸耳鸣。曾根据前列腺检查，诊为慢性前列腺炎。既往有高血压病史。检查：血压160/85毫米汞柱，面色苍白。舌苔薄白、脉沉迟。证属肾虚阳亏，寒湿凝滞。治宜平肝潜阳，散瘀开窍，利水祛浊。方药：珍珠母30克、归尾10克、赤芍10克、生磁石30克、菖蒲12克、猪苓10克、生石决明30克、泽泻10克，云苓10克、琥珀面2.4克（冲）、车前子10克、甘草3克。11月22日复诊：按上方服药14剂后，自觉头晕、耳鸣及心悸目眩均减轻，腰痠痛及尿频亦见好转，仍觉倦怠无力，排尿终末尚有白浊滴出。血压150/70毫米汞柱，舌苔薄白，脉沉细。改用平肝温肾、散寒利水之法，方药：珍珠母30克、菊花15克、猪苓10克，上肉桂6克、泽泻10克、萹蓄10克、紫石英30克、牛膝10克、归尾10克、车前子10克、川芎10克、琥珀面2.4克（冲）。12月7日三诊：14剂后，头晕目眩已止，偶有耳鸣，腰仍痠痛，已无尿痛及白浊，血压140/80毫米汞柱，舌苔薄白，脉沉细弱，两尺更弱。再以补肾柔肝，活血利湿之法治其本。方药：菟丝子18克、芡实15克、杜仲10克、枸杞子24克、归尾12克、川断18克、杭白芍15克、泽泻12克、牛膝10克、上肉桂10克、车前子10克、云苓10克。另服肾气丸，早晚各服一丸。按上法辨证加减，至1973年1月26日复诊，诸证悉愈。随访三年，未再复发。
 
-**按：**本例慢性前列腺炎同时并发高血压，临床表现呈一派虚象，但开始未用温肾之法，而用平肝潜阳，散瘀开窍，利水祛浊之法治其标，待肝阳平降后，再用温肾散寒佐以平肝，最后用补肾柔肝之法治本。治疗始未均不离通淋利水之剂。医者分清主次，抓住主要症状，逐一解决，发挥了中医辨证施治的特点，终于获效。（节选自《房芝萱外科经验》）
+**按：**本例慢性前列腺炎同时并发高血压，临床表现呈一派虚象，但开始未用温肾之法，而用平肝潜阳，散瘀开窍，利水祛浊之法治其标，待肝阳平降后，再用温肾散寒佐以平肝，最后用补肾柔肝之法治本。治疗始末均不离通淋利水之剂。医者分清主次，抓住主要症状，逐一解决，发挥了中医辨证施治的特点，终于获效。（节选自《房芝萱外科经验》）
 
 〔简便验方〕
 
-1.复方地虎汤：地龙20克、虎杖20克、，木通15克、车前子15克、莱菔子20克、黄芪30克、穿山甲20克、甘草10克，每日一剂，水煎服。适用于湿热蕴阻证为主者。节选自《吉林中医药》王少金等。
+1.复方地虎汤：地龙20克、虎杖20克、木通15克、车前子15克、莱菔子20克、黄芪30克、穿山甲20克、甘草10克，每日一剂，水煎服。适用于湿热蕴阻证为主者。节选自《吉林中医药》王少金等。
 
 2.苓薏败酱汤：茯苓25克，苡仁、败酱草各20克，石苇、萹蓄、瞿麦、滑石各15克，王不留行10克。水煎服。适用于湿热蕴阻证。（节选自《广西中医药》田乃庚）
