--- a/ok/wk/wk14-0.9.0.0.0.md
+++ b/ok/wk/wk14-0.9.0.0.0.md
@@ -1,6 +1,6 @@
 ## 第九节 前列腺增生症
 
-前列腺增生症又称“前列腺肥大”是老年男性的一种常见病。大多数发生在50~70岁之间。临床上以排尿困难、尿频数，急性尿闭或尿失禁为主要症状。早期往往仅为夜尿次数增多。中医无此病名，但在”癃闭”一证中基本包括了本病。“闭”为小便点滴不出的新证，“癃”指小便淋沥不畅的，尿频量少的久病，临床上一般合称“瘾闭”。
+前列腺增生症又称“前列腺肥大”是老年男性的一种常见病。大多数发生在50~70岁之间。临床上以排尿困难、尿频数，急性尿闭或尿失禁为主要症状。早期往往仅为夜尿次数增多。中医无此病名，但在”癃闭”一证中基本包括了本病。“闭”为小便点滴不出的新证，“癃”指小便淋沥不畅的，尿频量少的久病，临床上一般合称“癃闭”。
 
 〔病因病机〕
 
@@ -24,7 +24,7 @@
 
 方药：五淋散合滋肾通关丸加味。
 
-若兼肺经燥热，水道不利者，加桔梗、杏仁、桑白皮等
+若兼肺经燥热，水道不利者，加桔梗、杏仁、桑白皮等。
 
 2.膀胱失约证：小便不能控制、失禁或夜间遗尿或尿闭不出。精神倦怠，少气懒言，面色少华，舌淡苔白，脉弱无力。为中气下陷，膀胱失约。甚者则腰膝酸冷，面色㿠白，畏寒喜暖，脉兼沉迟，是肾阳亦衰，气化无权。
 
@@ -32,7 +32,7 @@
 
 方药：补中益气汤。
 
-若肾阳不足者，加济生肾气丸；遗尿频者，加桑螵蛸、益智仁；尿闭不出者，另冲琥珀服下。
+若兼肾阳不足者，加济生肾气丸；遗尿频者，加桑螵蛸、益智仁；尿闭不出者，另冲琥珀服下。
 
 3.血瘀内阻证：排尿困难，努责方出，尿细如线，淋漓不畅，或点滴全无，或尿后余沥。会阴、小腹胀痛，偶有血尿或血精，舌质有紫斑，脉沉细涩。此乃淤血癥块，阻塞尿道。
 
@@ -44,7 +44,7 @@
 
 主要用于暴闭，小便不通者。
 
-1.食盐500克炒热，布包，乘热熨小腹部，冷后炒热再熨。
+1.食盐500克，炒热，布包，乘热熨小腹部，冷后炒热再熨。
 
 2.癃闭外洗方：蒲公英60克、败酱草60克、附子30克、大黄30克、皂刺30克、肉桂15克，加水5000毫升，煎沸，先熏后洗，待温坐浴，一次40分钟，一日数次，以通为度。
 
@@ -64,7 +64,7 @@
 
 病史：小便不利4~5个月。8月份以来小腹憋痛，尿急，尿频，西医院诊为前列腺肥大，服乙烯雌酚，头晕不适，停药。经用青、链霉素、康得灵、中药桃红四物加味等未效。
 
-12月24日诊：患者小便不利，夜间更甚，口苦咽干而不欲饮水，胃院胀满，腰膝酸软无力，睡眠不佳，头晕，苔白，脉左弦右沉。证属阴虚有热，关门不利。治以滋肾通关，活血化瘀，佐以安神；处方：
+12月24日诊：患者小便不利，夜间更甚，口苦咽干而不欲饮水，胃院胀满，腰膝酸软无力，睡眠不佳，头晕，苔白，脉左弦右沉。证属阴虚有热，关门不利。治以滋肾通关，活血化瘀，佐以安神。处方：
 
 赤芍12克、白芍12克、红花10克、川牛膝10克、肉桂6克、盐知母10克、盐黄柏10克、生龙骨18克、生牡蛎18克。水煎服。
 
