--- a/ok/rm/rm05.md
+++ b/ok/rm/rm05.md
@@ -176,11 +176,11 @@
 >
 > 《黄帝内经讲解-养生学说》
 
-还要注意，这个规律不要教条化。对于已经失衡的病人，还是以调节平衡为先，不必拘于时间规律。比如虽说春夏养阳，但若是阴液不足的阴虚之人，此时阳气增长，造成阴阳失衡更严重，必须补足阴液；说秋冬养阴，若是身体已经出现问题，有爆发疾病的风险，则完全可以临时鼓动气血以缓解问题。
+还要注意，这个规律不要教条化。对于已经失衡的病人，还是以调节平衡为先，不必拘于时间规律。比如虽说春夏养阳，但若原本阴液不足的阴虚之人，此时阳气增长，造成阴阳失衡更严重，必须补足阴液；说秋冬养阴，若是身体已经出现问题，有爆发疾病的风险，则完全可以临时鼓动气血以缓解问题。
 
-> 凡作汤药，不可避晨夕，觉病须臾，即宜便治，不等早晚，则易愈矣。如或差迟，病即传变，虽欲除治，必难为力。
+> 春温夏热，元气外泄，阴精不足，药宜养阴；秋凉冬寒，阳气潜藏，勿轻开通，药宜养阳。
 >
-> 《伤寒论讲解-伤寒例》
+> 《神农本草经疏》
 
 #### 4、年龄增长的相关波动变化
 
