--- a/ok/gk/gk03-0.4.2.0.0.md
+++ b/ok/gk/gk03-0.4.2.0.0.md
@@ -10,8 +10,8 @@
 
 （二）虚证
 
-1.亡血耗气：多见于急性创伤骨折，或发生于开放性损伤出血过多，头部外伤及骨盆骨折等。气为血帅，血为气母，血脱则气焉附，故气亦随之而脱。表现为：损伤局部疼痛、肿胀，功能障碍，或创伤部位出血，伴有头晕目眩，手足发麻，烦躁不安，甚或不省入事，目闭口开，面色苍白，呼吸浅促，四肢厥冷，冷汗淋漓，二便失禁，苦淡，脉微细欲绝，或见芤象。
+1.亡血耗气：多见于急性创伤骨折，或发生于开放性损伤出血过多，头部外伤及骨盆骨折等。气为血帅，血为气母，血脱则气焉附，故气亦随之而脱。表现为：损伤局部疼痛、肿胀，功能障碍，或创伤部位出血，伴有头晕目眩，手足发麻，烦躁不安，甚或不省人事，目闭口开，面色苍白，呼吸浅促，四肢厥冷，冷汗淋漓，二便失禁，舌质淡，脉微细欲绝，或见芤象。
 
-2.气血不足：多因久病不愈，气血两伤，后天之精微不能及时补充，或先有失血，气随血耗，或先因气虚，不能生化而继见血少，以致气血不足。表现为：局部肿胀疼痛不明显，但痛肿缠绵不休，关节活动受限，或有骨畸和骨不连而有异常活动。伴有少气懒言，乏力自汗，面色淡白或萎黄，心悸失眠，形体消瘦，舌质淡嫩，脉细弱等。
+2.气血不足：多因久病不愈，气血两伤，后天之精微不能及时补充；或先有失血，气随血耗；或先因气虚，不能生化而继见血少，以致气血不足。表现为：局部肿胀疼痛不明显，但痛肿缠绵不休，关节活动受限，或有骨畸和骨不连而有异常活动。伴有少气懒言，乏力自汗，面色淡白或萎黄，心悸失眠，形体消瘦，舌质淡嫩，脉细弱等。
 
-3.肝肾不足：肾主骨，生髓，肝主筋，筋骨的修复有赖于肝肾精血的濡养，故而骨折后期多呈肝肾不足。此外，骨伤后气血不通，经络阻滞，瘀血内停，肝脏受损，肝肾同源，日久又累及于肾。表现为：局部肿胀、疼痛不明显，但肿痛缠绵，关节活动受限不明显。伴有买晕目眩，健忘失眼，耳中蝉鸣，口燥咽干，胸胁胀痛，腰酸腿软，颧红盗汗，五心烦热，甚或肢体麻木，屈伸不利，手足拘挛，舌质红而少苔，脉沉细或细数。
+3.肝肾不足：肾主骨，生髓，肝主筋，筋骨的修复有赖于肝肾精血的濡养，故而骨折后期多呈肝肾不足。此外，骨伤后气血不通，经络阻滞，瘀血内停，肝脏受损，肝肾同源，日久又累及于肾。表现为：局部肿胀、疼痛不明显，但肿痛缠绵，关节活动受限不明显。伴有头晕目眩，健忘失眠，耳中蝉鸣，口燥咽干，胸胁胀痛，腰酸腿软，颧红盗汗，五心烦热，甚或肢体麻木，屈伸不利，手足拘挛，舌质红而少苔，脉沉细或细数。
