--- a/ok/gk/gk03-0.5.1.0.0.md
+++ b/ok/gk/gk03-0.5.1.0.0.md
@@ -2,10 +2,10 @@
 
 骨骼系统的检查方法包括透视、拍片、特殊造影、电子计算机体层摄影（CT）等。
 
-1.透视：是一种粗略的检査方法。将病人或所需检查的部位，置于X线管与荧屏之间，直接检査。它的优点为简便、经济，不仅能观察骨骼和组织器官的形态，并可了解其运动情况，可随时转换病人体位，从不同的角度观察病变并确定病变的部位和骨折复位等。但荧光影像不甚清晰，微细的变化易被忽略，不适观察头颅、脊椎等较厚部位，影像不能留记录，复查时比较困滩。
+1.透视：是一种粗略的检査方法。将病人或所需检查的部位，置于X线管与荧屏之间，直接检査。它的优点为简便、经济，不仅能观察骨骼和组织器官的形态，并可了解其运动情况，可随时转换病人体位，从不同的角度观察病变并确定病变的部位和骨折复位等。但荧光影像不甚清晰，微细的变化易被忽略，不适观察头颅、脊椎等较厚部位，影像不能留记录，复查时比较困难。
 
 2.摄片：利用X线的感光作用，将病人所需检查部位置于X线管与胶片之间，映出的影像再进行检査。它可具备补偿透视的缺点，同时，透视的优点也正是摄影的缺点。是骨与关节系统的主要检查方法。一般采取二个方位进行摄片，即正位和侧位。根据部位和临床上要求，必要时还辅以斜位或切线位，使X线片呈现良好的黑白对比，清晰地显示骨的结构，对检查骨和关节病变，具有高度的特异性和敏感度。
 
 3.特殊造影：由于关节内半月板、椎间盘内的髓核、骨和软组织内血管等结构，对于X线的吸收和邻近软组织相近，缺乏天然的对比，因而利用造影剂增加对比度，使其显示。常用于关节、骨髓静脉、髓核、窦道、四肢血管和骨外膜充气造影等。
 
-4.电子计算机体层摄影（CT）：CT是一种无创伤性的安全检查方法，应用于骨骼系统检查日趋增多，其分辨组织密度差异的能力，比普通X线检査的敏感度大10〜25倍，对脂肪、血块、神经和肌腱等组织都有可能识别，能较好地显示骨内、骨外、骨髓腔和周围软组织的结构，确定病变部位和范围，了解病变组织与邻近大血管、神经和脏器的解剖关系，也可发现普通X线检查难以发现的病变，对确定病变性质有一定帮助。CT虽对骨关节病变有高度的敏感性，但其特异性较低，因此它决不能代替现有的X线检查方法，只有两者互相补充，才能提高病变的发现率和诊断的正确性。
+4.电子计算机体层摄影（CT）：CT是一种无创伤性的安全检查方法，应用于骨骼系统检查日趋增多，其分辨组织密度差异的能力，比普通X线检查的敏感度大10〜25倍，对脂肪、血块、神经和肌腱等组织都有可能识别，能较好地显示骨内、骨外、骨髓腔和周围软组织的结构，确定病变部位和范围，了解病变组织与邻近大血管、神经和脏器的解剖关系，也可发现普通X线检查难以发现的病变，对确定病变性质有一定帮助。CT虽对骨关节病变有高度的敏感性，但其特异性较低，因此它决不能代替现有的X线检查方法，只有两者互相补充，才能提高病变的发现率和诊断的正确性。
