--- a/ok/gk/gk03-0.5.2.0.0.md
+++ b/ok/gk/gk03-0.5.2.0.0.md
@@ -14,7 +14,7 @@
 
 长骨端——由松骨构成，呈不规则的网状。构成条状的细微结构称骨小樑，其排列因支重而有一定的方向，以股骨颈及跟骨最明显。骨皮质成线状包绕骨端，位于关节部者较厚，称为关节皮质（或称关节面）。
 
-关节——在X线片上正常关节软骨不显影，关节间隙即代表软骨的厚薄。关节软骨如因疾病侵蚀破坏，则关节间隙变窄，若积液则显示关节间隙增宽。
+关节——在X线片上正常关节软骨不显影，关节间隙即代表软骨的厚薄。关节软骨如因疾病侵蚀破坏，则关节间隙变窄；若积液则显示关节间隙增宽。
 
 （2）儿童期正常骨关节像：长管骨分骨干及骨骺，接近骨骺的骨干分称为干骺端，生长期的干骺端比较肥大。先期钙化带是干骺端的白线，代表化骨之初软骨的钙化。因骨骺软骨未完全骨化，故儿童期关节间隙在X线片上表现特别宽。
 
