--- a/ok/gk/gk03-0.5.3.0.0.md
+++ b/ok/gk/gk03-0.5.3.0.0.md
@@ -36,7 +36,7 @@
 
 X线抽查虽能显示骨关节病理变化，但诊断时应结合临床表现和病历。如年龄，先天性畸形多在出生时或出生后不久发现。三岁以前常见佝偻病，5〜20岁之间以结核和化脓性感染的为常见，原发性肿瘤多见青年，老年多为骨的癌转移。性别上亦有相当关系，如男性多有成骨性转移，而女性多有破骨性转移。病程结核须以年计，而化脓性骨髓炎的变化即在数周以内。
 
-4.X线检查注意事项及分析要点：X线检査对于骨与关节病变的诊断和鉴别诊断具有特殊的效果，以成为临床不可缺少检査手段，但必须注意：
+4.X线检查注意事项及分析要点：X线检查对于骨与关节病变的诊断和鉴别诊断具有特殊的效果，以成为临床不可缺少检查手段，但必须注意：
 
 （1）进行骨折的X线检查时，必须避免因检査而产生新的损伤。
 
