--- a/ok/rm/rm04.md
+++ b/ok/rm/rm04.md
@@ -38,9 +38,9 @@
 
 气血的产生过程中，五脏的作用最大，比如五脏藏神、心主血脉、肾藏精、肝藏血、肺主气等等，所以五脏功能最为关键。若五脏失衡，对人体要素的产生、体内环境的形成影响最大，内经说治五藏者半生半死。
 
-> **邪风之至，疾如风雨，故善治者治皮毛，其次治肌肤，其次治筋脉，其次治六府，其次治五藏,治五藏者，半死半生也。**
+> **邪风之至，疾如风雨，故善治者治皮毛，其次治肌肤，其次治筋脉，其次治六府，其次治五藏，治五藏者，半死半生也。**
 >
-> 《素问•阴阳应象大论》
+> ——《素问•阴阳应象大论》
 
 五脏之中，心肺为上焦，主导营卫气血流转于全身，其所需的能量物质来自中下焦的肝、脾、肾。所以五脏以此角度细分的话，中下焦的肝脾肾为上焦心肺之本。
 
@@ -48,7 +48,7 @@
 
 > 夫胃、大肠、小肠、三焦、膀胱，此五者天气之所生也，其气象天，故泻而不藏。**此受五藏浊气**，名曰传化之府，此不能久留，输泻者也。
 >
-> 《素问•五藏别论篇第十一》
+> ——《素问•五藏别论篇第十一》
 
 经络、血脉、三焦作为要素传递通道，需畅通无阻，其中以经络通畅为主导。
 
@@ -68,9 +68,9 @@
 >
 > 帝曰：夫道者年皆百岁，能有子乎？
 >
-> 岐伯曰：夫道者能却老而全形，身年虽寿，能生子也
+> 岐伯曰：夫道者能却老而全形，身年虽寿，能生子也。
 >
-> 《素问-上古天真论》
+> ——《素问•上古天真论》
 
 ### 5、精与先后天之本
 
@@ -78,17 +78,17 @@
 
 > **脾脉者土也，孤藏以灌四傍者也。**
 >
-> 《素问•玉机真藏论》
+> ——《素问•玉机真藏论》
 
 > **胃者，五藏六腑之海也，水谷皆入于胃，五藏六腑皆禀气于胃。五味各走其所喜，谷味酸，先走肝；谷味苦，先走心；谷味甘，先走脾；谷味辛，先走肺；谷味咸，先走肾。**
 >
-> 《灵枢·五味》
+> ——《灵枢•五味》
 
 人体的形、气血与脏腑所藏的后天之精皆来自对自然界天气、地气的吸收，所以呼吸与饮食都很重要。
 
 > **天食人以五气，地食人以五味。五气入鼻，藏于心肺，上使五色修明，音声能彰。五味入口，藏于肠胃，味有所藏，以养五气，气和而生，津液相成，神乃自生。**
 >
-> 《素问•六节藏象论》
+> ——《素问•六节藏象论》
 
 普通人都知道饮食、呼吸重要，但是难以意识到脾胃吸收能力的区别，所以中医重点提示这一点。
 
@@ -100,15 +100,15 @@
 
 > 肠胃之长，凡五丈八尺四寸，受水谷九斗二升一合合之大半，此肠胃所受水谷之数也。平人则不然，**胃满则肠虚，肠满则胃虚，更虚更满，故气得上下，五脏安定，血脉和利，精神乃居，故神者，水谷之精气也**。故肠胃之中，当留谷二斗，水一斗五升；故平人日再后，后二升半，一日中五升，七日五七三斗五升，而留水谷尽矣；故平人不食饮七日而死者，水谷精气津液皆尽故也。
 >
-> 《灵枢-平人绝谷第三十二》
+> ——《灵枢•平人绝谷第三十二》
 
 ### 6、神与其它：
 
 神总管以上全部过程，无论是高级的思维情绪还是低级的人体本能，所有平衡过程都由神来控制。若神的控制能力强，则即便精、气、血、形的数量稍少，也能配合的很好。反之，如果神的控制能力弱，则即便其它要素较多，也可能出现分配不合理的情况。
 
-> “得神者昌，失神者亡”
+> “得神者昌，失神者亡。”
 >
-> 《素问·移精变气论》
+> ——《素问•移精变气论》
 
 神与精气血等要素共荣互损。从共荣角度看，神足可以合理的调配气血；气血足则可以养神。从互损角度看，如果神异常，则逆乱损耗气血；而气血失衡则神无所养，可导致神的异常。
 
@@ -122,28 +122,28 @@
 
 人体以五脏为中心，生成并存储精、神、元气、气态物质、血、津液等要素，再以经络系统为主导，将要素传递到全身组织器官，形成适宜的体内环境，完成人体的整体功能活动。
 
-人体有很多因果（标本）关系。上述功能、形体、气血、脏腑经络、精、神是其中比较主要的部分，相互之间皆如树干与树根的关系。根为干之本，树根有问题必然影响树干，而树干的问题则即可能是树干本身的问题也可能是树根的问题。所以中医治病并非哪里发病就治疗哪里，而要分析疾病根源，以治本为主，除非紧急或特殊情况才以治标为先。明辨标本，急则治标，缓则治本，这就是中医的整体观。
+人体有很多因果（标本）关系。上述功能、形体、气血、脏腑经络、精、神是其中比较主要的部分，相互之间皆如树干与树根的关系。根为干之本，树根有问题必然影响树干，而树干的问题则即可能是树干本身的问题也可能是树根的问题。所以中医治病并非哪里发病就治疗哪里，而要分析疾病根源，以治本为主，除非紧急或特殊情况才以治标为先。**明辨标本，急则治标，缓则治本**，这就是中医的整体观。
 
 > 阴阳者，天地之道也，万物之纲纪，变化之父母，生杀之本始，神明之府也，**治病必求于本**。
 >
-> 《素问·阴阳应象大论》
+> ——《素问•阴阳应象大论》
 
 > **夫标本之道，要而博，小而大，可以言一而知百病之害**。言标与本，易而勿损，察本与标，气可令调， 明知胜复，为万民式，天之道毕矣。
 >
-> 《素问•至真要大论》
+> ——《素问•至真要大论》
 
 ## 2、指标失衡与人体疾病
 
-|      | 精     | 神       | 元气 | 天气                          | 血            | 津液   | 形         |
-| ---- | ------ | -------- | ---- | ----------------------------- | ------------- | ------ | ---------- |
-| 正虚 | 精不足 | 神不足   | 阳虚 | 气虚                          | 血虚          | 津液虚 | 肉槁、骨陷 |
-| 邪实 | 精浊   | 七情太过 | 阳亢 | 六淫太过、气郁、气滞、气逆... | 血淤、血热... | 痰饮   | 瘿、瘤...  |
+| — | 精     | 神       | 元气 | 天气                       | 血            | 津液   | 形         |
+| ---- | ------ | -------- | ---- | ---------------------- | ------------- | ------ | ---------- |
+| 正虚 | 精不足 | 神不足   | 阳虚 | 气虚                           | 血虚          | 津液虚 | 肉槁、骨陷 |
+| 邪实 | 精浊   | 七情太过 | 阳亢 | 六淫太过、<br/>气郁、气滞、气逆... | 血淤、血热... | 痰饮   | 瘿、瘤...  |
 
 人体的脏、腑、皮、肉、筋、骨全身各处，都需要这几大要素的平衡，也都有可能出现各自的失衡。比如肝可以有精的虚实、神的虚实、元气的虚实、天气的虚实、血的虚实等等，肺、心、脾、肾也是如此，皮、肉、筋、骨也是如此。**这类要素的失衡就是中医的证。**辨证论治就是要分辨出哪些部位分别有哪种失衡，进而进行对证治疗。
 
 > 帝曰：人有精气、津液、四肢、九窍、五脏十六部，三百六十五节，乃生百病，百病之生，皆有虚实。
 >
-> 《素问-调经论》
+> ——《素问•调经论》
 
 教材《概论》的辨证章节，只是列出了一些常见的情况，比如肝只列出了肝气郁结、肝火上炎、肝火上亢、肝风内动、 肝胆湿热、寒滞肝脉等几种情况，这些应只是常见情况，并非全部，其它也是类似。
 
@@ -171,7 +171,7 @@
 >
 > 《伤寒论讲解-138条》
 
-> 小青龙汤.....寒饮射肺之咳喘，多在寒冷季节发作，常**咳吐大量白色泡沫样痰**，且落盂成水，或咳嗽吐白色半透明胶粘之**冷痰**，宛似蛋清。寒饮郁遏阳气，若见面色青暗或黧黑，则谓之“水色”：寒饮阻滞营卫气血，若致面部出现块块色斑，则谓之“**水斑**”；水饮上泛，若致使面部庞浮或眼睑轻肿，则谓之“水气”。水气、水斑、水色，以及舌苔水滑、脉弦等，皆为辨寒饮内盛之依据。
+> 小青龙汤……寒饮射肺之咳喘，多在寒冷季节发作，常**咳吐大量白色泡沫样痰**，且落盂成水，或咳嗽吐白色半透明胶粘之**冷痰**，宛似蛋清。寒饮郁遏阳气，若见面色青暗或黧黑，则谓之“水色”：寒饮阻滞营卫气血，若致面部出现块块色斑，则谓之“**水斑**”；水饮上泛，若致使面部庞浮或眼睑轻肿，则谓之“水气”。水气、水斑、水色，以及舌苔水滑、脉弦等，皆为辨寒饮内盛之依据。
 >
 > 《伤寒论讲解-40条》
 
@@ -181,7 +181,7 @@
 
 > 岐伯曰：阳者天气也，主外；阴者地气也，主内。故阳道实，阴道虚。故犯贼风虚邪者阳受之，食饮不节，起居不时者，阴受之。阳受之则入六腑，阴受之则入五脏。入六腑则身热不时卧，上为喘呼；入五脏则瞋满闭塞，下为飧泄，久为肠澼。
 >
-> 《素问-太阴阳明论》
+> ——《素问•太阴阳明论》
 
 后面学习概论辩证章节，有阴阳表里寒热虚实的八纲辨证之说，其中的阴阳即指此处所讲的阴证、阳证。这种阴证、阳证是在宏观层面区分正气是否充足，抗邪是否有力。在微观具体部位，则各处都可以有自身的寒热虚实的失衡情况。比如，一个人的肺部正气不虚，但有痰饮，所以是肺部邪实的情况。肺部痰饮影响了肺部的功能，使其呼吸功能变弱，进而不能给全身提供充足的气，使全身都处于虚弱状态。这种情况，从整体角度看，属于整体正气不足的阴证，但是从肺部局部看，属于肺部正邪相争的实证。
 
@@ -201,5 +201,3 @@
 
 1. 气血为 __ 之本，而 __ 则为气血之本
 2. 小陷胸汤证属于在一个部位上有两个指标失衡，一个部位是指 __ 部位，两个指标分别是 __ 、热。大青龙汤证则是两个部位的失衡，为 __ 有热，外有 __ 。
-
-
