update ok/ek/ek0zl08-0.2.0.0.0.md. 修改1、证 与后面文字介绍的间隔短，增加空格1，这样可以跟PDF版相同。 修改2、电子版：以苏合香丸“濯”之”；修改为“灌”； 修改3、电子版：不可早“-”用阴柔寒滞的方药；修改为：去掉“-”

--- a/ok/ek/ek0zl08-0.2.0.0.0.md
+++ b/ok/ek/ek0zl08-0.2.0.0.0.md
@@ -2,9 +2,9 @@
 
 小儿病变迅速，易虚易实，故治疗必须及时，辨证必须准确。而选方用药必须果断，特别是一些危重疾病，更应争取时间，积极抢救，并须具有预见，防患未然。
 
-（―）闭证 小儿卒发惊厥，证见口噤，目张，两手握拳，昏迷不醒，宜急用开闭法。
+（―）闭证  小儿卒发惊厥，证见口噤，目张，两手握拳，昏迷不醒，宜急用开闭法。
 
-万氏治中恶似癎说：“中恶，小儿之危候也。其病有二，如中恶毒之气者，病自外至，其证眩仆，四肢厥冷，两手握拳，不能喘息，先用“霹雳散”得嚏即醒，以苏合香丸濯之，病自内生者，心腹刺痛、闷乱欲死，宜雄黄解毒丸”。（《幼科发挥》）但霹雳散中之麝香难得，可改用“通关散”搐入鼻孔，得喷嚏为验，或用姜汤调服少许亦效。
+万氏治中恶似癎说：“中恶，小儿之危候也。其病有二，如中恶毒之气者，病自外至，其证眩仆，四肢厥冷，两手握拳，不能喘息，先用“霹雳散”得嚏即醒，以苏合香丸灌之，病自内生者，心腹刺痛、闷乱欲死，宜雄黄解毒丸”。（《幼科发挥》）但霹雳散中之麝香难得，可改用“通关散”搐入鼻孔，得喷嚏为验，或用姜汤调服少许亦效。
 
 如痰在咽喉之中，壅塞粘滞，药食不能入者，则宜吐而去之，此在上者，越而治之法也。以雄黄解毒丸利其痰。
 
@@ -18,7 +18,7 @@
 
 万氏“至圣保命丹”一名紫金锭子，“一儿病惊风，诸医作风治之不效，万曰此非风也，乃因惊得之，风从肝治，惊从心治，不识病源，如何有效，乃取至圣保命丹治之，搐止”。（《幼科发挥》）
 
-（二）脱证 小儿病元气大虚，昏厥甚至出现口张，目合，汗出，气促，手撒之候，宜急用独参场。（分量随人随证）功能益气固脱（《幼科类萃》）此一时急救之法，待元气渐回，即当随证用药。（《兰台轨范》）
+（二）脱证  小儿病元气大虚，昏厥甚至出现口张，目合，汗出，气促，手撒之候，宜急用独参场。（分量随人随证）功能益气固脱（《幼科类萃》）此一时急救之法，待元气渐回，即当随证用药。（《兰台轨范》）
 
 如出现汗冷、肢厥、脉微欲绝，此属阴阳气血暴脱，宜参附汤（人参3〜6克，附片2〜3克）加姜炭2克，红枣3枚水煎服，肢温汗止为度。
 
@@ -30,9 +30,9 @@
 
 一儿甫七岁，“诊得脉虚，身热自汗，是伤于暑也，气不足以息，言不足以听。是正气不胜也。医投发散清凉，恐汗出不止，即难救药。宜以参、芪为君，东垣谓参、芪、甘草、甘温能除大热，合千金生脉散，为长夏体虚受暑之主药……”。（《历代儿科医案集成》）
 
-（三）高热惊厥 小儿感冒风寒郁而为热，体温虽高而恶寒无汗的表证仍在，用方忌凉遏而宜宣发。即《内经》“体若燔炭，汗出而散”之旨，以《肘后》葱豉汤，“葱白和豆豉结合，微辛微温，发汗不伤阴，无凉遏的顾虑”。此上海张氏名医经验（见《近代中医流派经验选集》），冬加苏叶、杏仁，春加荆芥、防风，夏加粉葛、薄荷，秋加桑叶、蝉衣，灵活运用，尤为无弊。
+（三）高热惊厥  小儿感冒风寒郁而为热，体温虽高而恶寒无汗的表证仍在，用方忌凉遏而宜宣发。即《内经》“体若燔炭，汗出而散”之旨，以《肘后》葱豉汤，“葱白和豆豉结合，微辛微温，发汗不伤阴，无凉遏的顾虑”。此上海张氏名医经验（见《近代中医流派经验选集》），冬加苏叶、杏仁，春加荆芥、防风，夏加粉葛、薄荷，秋加桑叶、蝉衣，灵活运用，尤为无弊。
 
-钱氏用栀豉饮子“治小儿蓄热在中，身热烦躁，昏迷不食”，（《小儿药证直诀》）。近人治时邪感袭，身热未解，心烦懊憹，脉形弦滑，舌苔黄腻，相当于热邪过卫入气的阶段，不可早-用阴柔寒滞的方药，而豆豉的透达解肌仍不可少，山栀的轻清泄膈热，在所必需，若药太凉，则使邪不外达而内闭。展气化以轻清，连翘、牛蒡子、淡黄芩、薄荷、甘草可伍也。
+钱氏用栀豉饮子“治小儿蓄热在中，身热烦躁，昏迷不食”，（《小儿药证直诀》）。近人治时邪感袭，身热未解，心烦懊憹，脉形弦滑，舌苔黄腻，相当于热邪过卫入气的阶段，不可早用阴柔寒滞的方药，而豆豉的透达解肌仍不可少，山栀的轻清泄膈热，在所必需，若药太凉，则使邪不外达而内闭。展气化以轻清，连翘、牛蒡子、淡黄芩、薄荷、甘草可伍也。
 
 如“温邪上受，首先犯肺，逆传心包。”证见神识不清，热极则激动肝风，而为抽风痉厥，宜用羚羊钩芚汤、以平肝熄风，如无羚羊角，可用山羊角十倍其量，或锈铁烧红淬水代之（民间经验），若高热昏迷，抽风明显者，可选用牛黄丸、紫雪、至宝丹（三宝），清心开窍，镇痉熄风。
 
