--- a/ok/gk/gk03-0.6.4.0.0.md
+++ b/ok/gk/gk03-0.6.4.0.0.md
@@ -6,7 +6,7 @@
 
 肩关节，用直径3.8毫米的关节镜从后方插入关节内，同时由助手将肩关节间隙拉开，可观察肩关节约87%的范围。对某些关节炎的诊断和确定肩袖断裂的程度有帮助，此外亦可通过关节镜作些手术。
 
-复习恩考题
+复习思考题
 
 1.骨伤科的主要症状有哪些？鉴别要点是什么？
 
