--- a/ok/wk/wk14-0.10.0.0.0.md
+++ b/ok/wk/wk14-0.10.0.0.0.md
@@ -1,10 +1,10 @@
 ## 第十节 血精
 
-血精是男性性交时射出含有带血的精液。早在《诸病源候论》中有记载，后世亦有进一步论述。本病常与前列腺炎并发；偶见精液中带血时，才被发现。
+血精是男性性交时射出含有带血的精液。早在《诸病源候论》中有记载，后世亦有进一步论述。本病常与前列腺炎并发，偶见精液中带血时，才被发现。
 
 〔病因病机〕
 
-房室过度是血精的主要原因，肾阴不足，相火偏旺，扰动精室，迫血妄行，是主要病变机理。肾阴亏损，可因先天不足，或因强力入房伤肾。亦有兼困湿热下注，循经入扰精室，血热妄行所致。
+房室过度是血精的主要原因，肾阴不足，相火偏旺，扰动精室，迫血妄行，是主要病变机理。肾阴亏损，可因先天不足，或因强力入房伤肾。亦有兼因湿热下注，循经入扰精室，血热妄行所致。
 
 〔辨证论治〕
 
@@ -38,7 +38,8 @@
 
 〔应用例案〕
 
-朱XX，男，45岁，1975年11月24日初诊。患者于七、八年前起，因长途跋涉，自觉尿道疼痛，随后性交流血，血色紫红，无痛感，且有腰痛痠楚，夜寐多梦，容易疲劳，口燥咽干，脉细弦，舌尖红。拟滋阴和血，佐以清热为法。制首乌15克、丹参15克、丹皮10克、知母10克、龟板30克、鳖甲18克、女贞子12克、旱莲草10克、黄柏5克、十大功劳10克，五剂。药后病情好转，精血已止，睡眠尚好，但头晕，左侧睾丸胀痛，夜尿多，脉象虚软，舌淡红，守原方加橘核30克，金樱子30克、芡实18克。服五剂后，嘱其服六味地黄丸巩固疗效。半年后未见复发，病告痊愈。**按：**本案中龟板、鳖甲、首乌以滋养真阴，丹参、丹皮凉血和血，知母、黄柏、十大功劳滋阴而清下焦湿热，共奏滋阴降火，凉血止血之功，药证合拍，自然获效。（节选自《中医奇证新编》江西陈瑞春）
+朱XX，男，45岁，1975年11月24日初诊。患者于七、八年前起，因长途跋涉，自觉尿道疼痛，随后性交流血，血色紫红，无痛感，且有腰痛痠楚，夜寐多梦，容易疲劳，口燥咽干，脉细弦，舌尖红。拟滋阴和血，佐以清热为法。制首乌15克、丹参15克、丹皮10克、知母10克、龟板30克、鳖甲18克、女贞子12克、旱莲草10克、黄柏5克、十大功劳10克，五剂。药后病情好转，精血已止，睡眠尚好，但头晕，左侧睾丸胀痛，夜尿多，脉象虚软，舌淡红，守原方加橘核30克，金樱子30克、芡实18克。服五剂后，嘱其服六味地黄丸巩固疗效。半年后未见复发，病告痊愈。
+**按：**本案中龟板、鳖甲、首乌以滋养真阴，丹参、丹皮凉血和血，知母、黄柏、十大功劳滋阴而清下焦湿热，共奏滋阴降火，凉血止血之功，药证合拍，自然获效。（节选自《中医奇证新编》江西陈瑞春）
 
 〔文献摘录〕
 
