--- a/ok/ek/ek0zl05-0.2.0.0.0.md
+++ b/ok/ek/ek0zl05-0.2.0.0.0.md
@@ -14,6 +14,6 @@
 
 （1）呼吸：呼吸总以平顺调畅而深长为佳。若喘促气粗，多为肺气闭郁；痰鸣如拽锯，为风痰上壅。呼吸微弱无力，概属虚证。呼多吸少，为肺气将绝，病多危殆。
 
-（2）咳嗽声：咳嗽以咳声畅利，痰易咳出为轻。咳声轻扬而流清涕，为外感凤寒；咳声重浊而痰黄者，为外感风热；干咳无痰，咳声响亮，多属肺燥；咳而气粗声重，痰涎黄稠，多属肺热；咳声阵发，连续不断，逆气上冲，并有回声，或继以呕吐，为顿咳征候；咳声嘶哑，或如犬吠，常见于喉炎或白喉。
+（2）咳嗽声：咳嗽以咳声畅利，痰易咳出为轻。咳声轻扬而流清涕，为外感风寒；咳声重浊而痰黄者，为外感风热；干咳无痰，咳声响亮，多属肺燥；咳而气粗声重，痰涎黄稠，多属肺热；咳声阵发，连续不断，逆气上冲，并有回声，或继以呕吐，为顿咳征候；咳声嘶哑，或如犬吠，常见于喉炎或白喉。
 
-（二）嗅气味 口为肺胃之通道，因此口气臭秽，多属肺胃之热郁蒸，浊气上升所致。口气臭腐，牙龈肿胀溃烂，则为牙疳，口气臭秽，暧气酸腐，多为伤食；口气腥臭，见于血症，如齿衄；口气腥臭，咳吐浊痰夹血，则为热痰壅肺，郁而成脓的肺痈。大便臭秽，是湿热积滞；大便酸臭而稀，多为伤食；下利清谷，无明显臭味，为脾肾两虚。小便短赤，臊臭，为湿热下注；小便清长常为脾肾虚寒，混浊不清，是膀胱蕴湿。
+（二）嗅气味 口为肺胃之通道，因此口气臭秽，多属肺胃之热郁蒸，浊气上升所致。口气臭腐，牙龈肿胀溃烂，则为牙疳，口气臭秽，嗳气酸腐，多为伤食；口气腥臭，见于血症，如齿衄；口气腥臭，咳吐浊痰夹血，则为热痰壅肺，郁而成脓的肺痈。大便臭秽，是湿热积滞；大便酸臭而稀，多为伤食；下利清谷，无明显臭味，为脾肾两虚。小便短赤，臊臭，为湿热下注；小便清长常为脾肾虚寒，混浊不清，是膀胱蕴湿。
