--- a/ok/ek/ek0zl05-0.3.0.0.0.md
+++ b/ok/ek/ek0zl05-0.3.0.0.0.md
@@ -1,10 +1,10 @@
 ## 第三节 问诊
 
-问诊是采集病情的重要方法。由于幼儿不会语言，古称“哑科”。幼、小儿病因，除先天性因素如胎弱等外，后天因素如外感、内伤、均须由其父母或保育人员叙述。询问其起病时间、原因及症状，遇主要环节不厌其烦地追踪探询：以找出疾病的根本原因。但小儿问诊有其特点，其程序内容，可按“十问”进行。
+问诊是采集病情的重要方法。由于幼儿不会语言，古称“哑科”。幼、小儿病因，除先天性因素如胎弱等外，后天因素如外感、内伤、均须由其父母或保育人员叙述。询问其起病时间、原因及症状，遇主要环节不厌其烦地追踪探询，以找出疾病的根本原因。但小儿问诊有其特点，其程序内容，可按“十问”进行。
 
-（一）何年龄 临床上很多儿科疾病往往与年龄有密切关系，如诊断脐风（新生儿破伤风）、胎黄（新生儿黄疸）等，见于初生数日内。某些传染病与年龄也有密切关系，如麻疹大多发生在出生六个月以后的幼儿，水痘、百日咳等在学龄前比较多见。十二岁以后所患疾病的过程，基本上接近于成人。所以询问年龄对诊断疾病具有重要意义。
+（一）问年龄 临床上很多儿科疾病往往与年龄有密切关系，如诊断脐风（新生儿破伤风）、胎黄（新生儿黄疸）等，见于初生数日内。某些传染病与年龄也有密切关系，如麻疹大多发生在出生六个月以后的幼儿，水痘、百日咳等在学龄前比较多见。十二岁以后所患疾病的过程，基本上接近于成人。所以询问年龄对诊断疾病具有重要意义。
 
-（二）问个人史 应问喂养史和生产发育史。要何清胎次、产次、是否足月生，顺产还是难产，接生方式，出生地点，出生时的情况，生产居住地区和条件，以及孕育期母体的营养和健康情况。喂养史包括喂养方式和辅助食品种类及其添加辅食情况，已否断奶和断奶后的饮食情况，对较大儿童还应询问生活习惯，有无偏食习惯，现在饮食种类和食欲等情况。发育史包括体格和智力的发育；如学坐、立、行、语言等出现的时间，出牙时间，前囟闭合的时期。对已入学的儿童，还要了解学习情况，这些对推测先后夫、智力、发育等，结合临床分析将有很大帮助。
+（二）问个人史 应问喂养史和生产发育史。要问清胎次、产次、是否足月生，顺产还是难产，接生方式，出生地点，出生时的情况，生产居住地区和条件，以及孕育期母体的营养和健康情况。喂养史包括喂养方式和辅助食品种类及其添加辅食情况，已否断奶和断奶后的饮食情况，对较大儿童还应询问生活习惯，有无偏食习惯，现在饮食种类和食欲等情况。发育史包括体格和智力的发育，如学坐、立、行、语言等出现的时间，出牙时间，前囟闭合的时期。对已入学的儿童，还要了解学习情况，这些对推测先后夫、智力、发育等，结合临床分析将有很大帮助。
 
 （三）问寒热 小儿寒热，可以通过接触的感觉（手触额头、身躯、手足心、或授乳时乳头的热感）和小儿的姿态来测知。由于小儿发热一般以早晨偏低，午后和夜间较高，故询问时要问清发热的时间，同时还需测知发热的程度。若身体踡缩，喜偎母怀，皮起鸡粟，多为恶寒的现象。喜露头面，睡喜仰卧，扬手掷足，吮乳口热者，则为发热。较大儿童可以直接询问，如发热恶寒而无汗者，则为外感风寒。发热怕风，兼有汗，口渴，多为外感风热。发热不恶寒，反欲掷被揭衣者，则为邪热入里，里热渐盛的表现，若头部炽热而神志昏沉的，须防惊搐，寒热往来，多为邪在半表里。发热连续不解，午后夜间尤甚、舌苔厚腻者，则为湿热内蕴。若夏令发热持续不退，无汗、口渴、多尿，属暑热郁蒸，多为夏季热。午后或傍晚低热，伴盗汗者，称为阴虚潮热。若恶寒而不发热，多为里寒或阳虚的表现。夜间发热，腹壁手足心热，多属阳明潮热，或食滞蕴积脾胃。若久热不退，须辨别是否疳积发热（多伴肚大青筋）。
 
